--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-06 13:43:27
-# Total rules: 5074
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-07 10:49:41
+# Total rules: 5094
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -319,6 +319,7 @@
 .adsrvr.org
 .adss.video.qq.com
 .adss.yahoo.com
+.adstage-analytics.herokuapp.com
 .adstat.cp11.ott.cibntv.net
 .adstatic.b-cdn.net
 .adstatic.zhihu.com
@@ -487,8 +488,10 @@
 .aniview.com
 .anouslab.cmail20.com
 .anquan.baidu.com
+.anti-adblock.herokuapp.com
 .antivirus.baidu.com
 .anymind360-com.cdn.ampproject.org
+.ao-freegeoip.herokuapp.com
 .aod-image-material.cdn.bcebos.com
 .aod-video-antusheng.cdn.bcebos.com
 .apac.zendesk.com
@@ -597,6 +600,7 @@
 .audid-api-sg.taobao.com
 .audid-api.taobao.com
 .audio.ali.xmcdn.com
+.aurora-d3.herokuapp.com
 .auth.be.sec.miui.com
 .authbe.sec.intl.miui.com
 .auto-deploy.pages.dev
@@ -927,6 +931,8 @@
 .collect.kugou.com
 .collect.nature.com
 .collect.rebelmouse.io
+.collection-endpoint-prod.herokuapp.com
+.collection-endpoint-staging.herokuapp.com
 .collector-cdn.github.com
 .collector-dev.cdp-dev.cnn.com
 .collector-pxebumdlwe.px-cloud.net
@@ -1018,6 +1024,7 @@
 .ctr.hd.sohu.com
 .curiosity-seven.vercel.app
 .customad.cnn.com
+.customerevents.dradis.netflix.com
 .customerevents.netflix.com
 .cxense.com
 .d-test.39.net
@@ -1656,6 +1663,7 @@
 .d2h2t5pll64zl8.cloudfront.net
 .d2h7xgu48ne6by.cloudfront.net
 .d2h85i07ehs6ej.cloudfront.net
+.d2hdyssxn6lpj2.cloudfront.net
 .d2ho1n52p59mwv.cloudfront.net
 .d2hvwfg7vv4mhf.cloudfront.net
 .d2i4wzwe8j1np9.cloudfront.net
@@ -2302,6 +2310,7 @@
 .data-b19475ee82.weather.com
 .data-d4dfa4bc2c.weather.com
 .data-optout-service.uca.cloud.unity3d.com
+.data-saver-cindi.herokuapp.com
 .data-sdk-uuid-log.d.meituan.net
 .data-sdk-uuid-report.dreport.meituan.net
 .data.1337.test.ajo.adobe.com
@@ -2819,6 +2828,7 @@
 .error-tracking.reddit.com
 .ers.baidu.com
 .espy.boehs.org
+.essential-apps-analytics.herokuapp.com
 .et.nytimes.com
 .et.tanx.com
 .etahub.com
@@ -2896,9 +2906,11 @@
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
 .ffe390afd658c19dcbf707e0597b846d.de
+.filament-stats.herokuapp.com
 .file.daihuo.qq.com
 .files2.sogou.com
 .fileserverpcdn.cdn.huya.com
+.fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
 .fioricet-online.blogspot.com
 .firebase.googleapis.com
@@ -2937,6 +2949,7 @@
 .free-cdn.oss-cn-shanghai.aliyuncs.com
 .freebitcoin.pages.dev
 .freewheel-mtgx-tv.akamaized.net
+.fs-client-logger.herokuapp.com
 .fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com
 .ftwo-feedback.autohome.com.cn
 .ftwo-receiver.autohome.com.cn
@@ -3254,6 +3267,7 @@
 .icelandclothing.myshopify.com
 .ichannel.isnssdk.com
 .ichnaea-web.netflix.com
+.ichnaea.dradis.netflix.com
 .ichnaea.netflix.com
 .idm-su.baidu.com
 .idm.api.autohome.com.cn
@@ -3268,6 +3282,7 @@
 .igexin.com
 .ikcode.baidu.com
 .ilive.qq.com
+.ilyonanalytics.herokuapp.com
 .im-x.jd.com
 .image-ad.sm.cn
 .image.9game.cn
@@ -3396,6 +3411,7 @@
 .jzt.jd.com
 .k8s-adserver-adserver-4b35ec6a1d-815734624.us-east-1.elb.amazonaws.com
 .kaan.kakao.com
+.kaiser-impact.pages.dev
 .kape.dataplane.rudderstack.com
 .karanpcofficial.blogspot.com
 .kde.qq.com
@@ -3891,6 +3907,7 @@
 .oneid.mmstat.com
 .onemob.mobi
 .onepush.query.yahoo.com
+.onespot-tracking.herokuapp.com
 .onetag-sys.com
 .onethingpcs.com
 .online-forex-trading-systems.blogspot.com
@@ -4529,6 +4546,7 @@
 .statsfe2.ws.microsoft.com
 .statsig.anthropic.com
 .statsigapi.net
+.statt-collect.herokuapp.com
 .statwup.huya.com
 .stdl.qq.com
 .stingcool-com.myshopify.com
@@ -4555,6 +4573,7 @@
 .suvset.sohu.com
 .sw.mobile.sogou.com
 .swa.gtimg.com
+.sworkitads.herokuapp.com
 .swwwxww.oss-cn-hangzhou.aliyuncs.com
 .sxeimx.mydays.de
 .sync.shinobi.jp
@@ -4680,6 +4699,7 @@
 .top.h.qhimg.com
 .toruk.tanx.com
 .tp2p.kg.qq.com
+.tpi-app.herokuapp.com
 .tpstelemetry.tencent.com
 .tpush.html5.qq.com
 .tr.ds.kakao.com
