--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-07 20:37:06
-# Total rules: 5094
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-08 10:11:51
+# Total rules: 5097
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -1075,6 +1075,7 @@
 .d12tu1kocp8e8u.cloudfront.net
 .d12ylqdkzgcup5.cloudfront.net
 .d12zgccgt6pwjz.cloudfront.net
+.d133y3h5r255gq.cloudfront.net
 .d138am4hd4ke4y.cloudfront.net
 .d13gni3sfor862.cloudfront.net
 .d13j11nqjt0s84.cloudfront.net
@@ -1586,6 +1587,7 @@
 .d29mhxfd390ueb.cloudfront.net
 .d29mxewlidfjg1.cloudfront.net
 .d2a0tn74luqqde.cloudfront.net
+.d2a0wk9ahruyzx.cloudfront.net
 .d2a4qm4se0se0m.cloudfront.net
 .d2a80scaiwzqau.cloudfront.net
 .d2a945og79nayl.cloudfront.net
@@ -3420,6 +3422,7 @@
 .kgipadstatbak.kugou.com
 .kgmobilestat.kugou.com
 .kgmobilestatbak.kugou.com
+.kidpowers.com
 .kiks.yandex.ru
 .kinesis.eu-west-1.amazonaws.com
 .kjdsfjisdfjr23.azurewebsites.net
@@ -3852,6 +3855,7 @@
 .ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
 .nmetrics.samsung.com
+.nmetrics.samsungmobile.com
 .nmtracking.netflix.com
 .no9pldds1lmn3.soundcloud.com
 .noa.yahoo.com
@@ -4227,7 +4231,6 @@
 .review.gdtimg.com
 .rg-3tn.pages.dev
 .rh.qq.com
-.rhaphaecelts.com
 .rich.qq.com
 .richmedia.video.qq.com
 .richmedia.yimg.com
