--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-08 10:11:51
-# Total rules: 5097
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-09 10:17:56
+# Total rules: 5099
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -1998,6 +1998,7 @@
 .d3bo67muzbfgtl.cloudfront.net
 .d3boleenfhg2gk.cloudfront.net
 .d3bsbtr7gp443k.cloudfront.net
+.d3bviecoc049je.cloudfront.net
 .d3c3cq33003psk.cloudfront.net
 .d3c3uihon9kmp.cloudfront.net
 .d3c8j8snkzfr1n.cloudfront.net
@@ -4761,6 +4762,7 @@
 .treatment.grammarly.com
 .trends.mobile.sina.cn
 .treverschmelerkris18.myshopify.com
+.trgfx.b-cdn.net
 .trkcmb.business.hsbc.com.hk
 .trkgbm.business.hsbc.com.hk
 .trkhinv.business.hsbc.com.hk
