--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-09 10:17:56
-# Total rules: 5099
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-10 09:52:23
+# Total rules: 5104
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -1202,6 +1202,7 @@
 .d1cw0c50l8jv65.cloudfront.net
 .d1cykymlllue3h.cloudfront.net
 .d1czd1q73kbu32.cloudfront.net
+.d1d38a26hlyhe3.cloudfront.net
 .d1d7hwtv2l91pm.cloudfront.net
 .d1dcnte8mfzkpv.cloudfront.net
 .d1dh1gvx7p0imm.cloudfront.net
@@ -1274,6 +1275,7 @@
 .d1j818d3wapogd.cloudfront.net
 .d1j9qsxe04m2ki.cloudfront.net
 .d1jcj9gy98l90g.cloudfront.net
+.d1jd9usa22o1l7.cloudfront.net
 .d1jikhx1ssl81z.cloudfront.net
 .d1jnvfp2m6fzvq.cloudfront.net
 .d1jq9nooxeft24.cloudfront.net
@@ -1916,6 +1918,7 @@
 .d32z5ni8t5127x.cloudfront.net
 .d32zx4lhje2crr.cloudfront.net
 .d333p98mzatwjz.cloudfront.net
+.d335luupugsy2.cloudfront.net
 .d33bakhpv0qxhf.cloudfront.net
 .d33fc9uy0cnxl9.cloudfront.net
 .d33gmheck9s2xl.cloudfront.net
@@ -1979,6 +1982,7 @@
 .d39iocnrk5rxnb.cloudfront.net
 .d39ion77s0ucuz.cloudfront.net
 .d39xdhxlbi0rlm.cloudfront.net
+.d39xkyrc56llbg.cloudfront.net
 .d39xxywi4dmut5.cloudfront.net
 .d39yds8oe4n4jq.cloudfront.net
 .d3a00ifauhjdp.cloudfront.net
@@ -2425,6 +2429,7 @@
 .debojuagug1sf.cloudfront.net
 .defaultts.tc.qq.com
 .defppmasu35cw.cloudfront.net
+.deguxtdhf6d01.cloudfront.net
 .deisd5o6v8rgq.cloudfront.net
 .dek5iqd53g59a.cloudfront.net
 .demdex.net
