--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-10 09:52:23
-# Total rules: 5104
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-10 10:19:23
+# Total rules: 5098
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -529,7 +529,6 @@
 .api.share.mob.com
 .api.shuaji.360.cn
 .api.sprig.com
-.api.stacksocial.com
 .api.uca.cloud.unity3d.com
 .api.waptest.taobao.com
 .api.youqian.baidu.com
@@ -2921,7 +2920,6 @@
 .fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
 .fioricet-online.blogspot.com
-.firebase.googleapis.com
 .firebasedynamiclinks.googleapis.com
 .firebaselogging-pa.googleapis.com
 .firebaselogging.googleapis.com
@@ -3006,14 +3004,12 @@
 .gemini.yahoo.com
 .gen.alicdn.com
 .geo.adobe.com
-.geo.cnbc.com
 .geo.query.yahoo.com
 .geo.yahoo.com
 .geo2.adobe.com
 .geoedge.be
 .geofence.sys.miui.com
 .geolocation.forbes.com
-.geolocation.nexusmedia.workers.dev
 .gepush.com
 .getclicky.com
 .getui.com
@@ -3681,7 +3677,6 @@
 .mellowads.b-cdn.net
 .merequartz.com
 .mermaid.ximalaya.com
-.messaging-notifications.api.nytimes.com
 .meter-svc.nytimes.com
 .metok.sys.miui.com
 .metric.huya.com
@@ -3969,6 +3964,7 @@
 .p.store.qq.com
 .p.tanx.com
 .p.twitter.com
+.p.typekit.net
 .p1-feedback.byteimg.com
 .p16-ad.byteoversea.com
 .p2p.huya.com
@@ -4569,7 +4565,6 @@
 .strip.alicdn.com
 .su.bdimg.com
 .su.bdstatic.com
-.subscribe.washingtonpost.com
 .success.act-on.com
 .sugar.zhihu.com
 .suggestion.baidu.com
@@ -4610,7 +4605,6 @@
 .tagdelivery.mayoclinic.org
 .tags.voacantonese.com
 .tajs.qq.com
-.talk.washingtonpost.com
 .talkingdata.com
 .tapdaq-adverts.global.ssl.fastly.net
 .tapioni.com
@@ -4649,6 +4643,7 @@
 .tenmaxsgads.blob.core.windows.net
 .tepshared.tep.test.ajo.adobe.com
 .teredo.ipv6.microsoft.com
+.terminallog-76327.gzc.vod.tencent-cloud.com
 .test-landing-page-122122.email-disney.cjm.adobe.com
 .test-luckydraw.csdn.net
 .test.activity.windows.com
@@ -4789,7 +4784,6 @@
 .tvmanager.pandora.xiaomi.com
 .tvmgr.pandora.xiaomi.com
 .tyh.taobao.com
-.typekit.net
 .tz.sec.xiaomi.com
 .u-x.jd.com
 .u.x.jd.com
