--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-10 10:19:23
-# Total rules: 5098
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-10 11:13:11
+# Total rules: 5109
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -529,6 +529,7 @@
 .api.share.mob.com
 .api.shuaji.360.cn
 .api.sprig.com
+.api.stacksocial.com
 .api.uca.cloud.unity3d.com
 .api.waptest.taobao.com
 .api.youqian.baidu.com
@@ -901,6 +902,7 @@
 .clientlogdep.music.163.com
 .clientlogsf.music.163.com
 .clientmetrics-pa.googleapis.com
+.clients1.google.com
 .clmbtech.com
 .clouderrorreporting.googleapis.com
 .cloudflareinsights.com
@@ -2781,6 +2783,7 @@
 .e.stat.ykimg.com
 .e045f561.b-cdn.net
 .e1.o.lencr.org
+.earth.cointelegraph.com
 .easytomessage.com
 .eaus2watcab01.blob.core.windows.net
 .eaus2watcab02.blob.core.windows.net
@@ -2920,6 +2923,7 @@
 .fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
 .fioricet-online.blogspot.com
+.firebase.googleapis.com
 .firebasedynamiclinks.googleapis.com
 .firebaselogging-pa.googleapis.com
 .firebaselogging.googleapis.com
@@ -3004,12 +3008,14 @@
 .gemini.yahoo.com
 .gen.alicdn.com
 .geo.adobe.com
+.geo.cnbc.com
 .geo.query.yahoo.com
 .geo.yahoo.com
 .geo2.adobe.com
 .geoedge.be
 .geofence.sys.miui.com
 .geolocation.forbes.com
+.geolocation.nexusmedia.workers.dev
 .gepush.com
 .getclicky.com
 .getui.com
@@ -3677,6 +3683,7 @@
 .mellowads.b-cdn.net
 .merequartz.com
 .mermaid.ximalaya.com
+.messaging-notifications.api.nytimes.com
 .meter-svc.nytimes.com
 .metok.sys.miui.com
 .metric.huya.com
@@ -3820,6 +3827,7 @@
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
 .mxpl.9gag.com
 .mxpnl.com
+.myaccount.nytimes.com
 .mybbc-analytics.files.bbci.co.uk
 .myes.youku.com
 .myhandshops.myshopify.com
@@ -3964,7 +3972,6 @@
 .p.store.qq.com
 .p.tanx.com
 .p.twitter.com
-.p.typekit.net
 .p1-feedback.byteimg.com
 .p16-ad.byteoversea.com
 .p2p.huya.com
@@ -4076,6 +4083,7 @@
 .player.cnevids.com
 .plbusiness.samsung.com
 .pls.prd.mz.internal.unity3d.com
+.plutonium.cointelegraph.com
 .pmir.3g.qq.com
 .pms.mb.qq.com
 .podcast.e.adobe.com
@@ -4565,6 +4573,7 @@
 .strip.alicdn.com
 .su.bdimg.com
 .su.bdstatic.com
+.subscribe.washingtonpost.com
 .success.act-on.com
 .sugar.zhihu.com
 .suggestion.baidu.com
@@ -4605,6 +4614,7 @@
 .tagdelivery.mayoclinic.org
 .tags.voacantonese.com
 .tajs.qq.com
+.talk.washingtonpost.com
 .talkingdata.com
 .tapdaq-adverts.global.ssl.fastly.net
 .tapioni.com
@@ -4784,6 +4794,7 @@
 .tvmanager.pandora.xiaomi.com
 .tvmgr.pandora.xiaomi.com
 .tyh.taobao.com
+.typekit.net
 .tz.sec.xiaomi.com
 .u-x.jd.com
 .u.x.jd.com
