--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-10 11:13:11
-# Total rules: 5109
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-11 10:00:19
+# Total rules: 5111
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -2427,6 +2427,7 @@
 .de.pandora.xiaomi.com
 .de2nsnw1i3egd.cloudfront.net
 .de3hzpms0kfq9.cloudfront.net
+.dea9webxhb7gu.cloudfront.net
 .debojuagug1sf.cloudfront.net
 .defaultts.tc.qq.com
 .defppmasu35cw.cloudfront.net
@@ -2465,6 +2466,7 @@
 .dfjlgfb4lxka5.cloudfront.net
 .dfqcp2awt0947.cloudfront.net
 .dfwbfr2blhmr5.cloudfront.net
+.dfwp6qatulz0p.cloudfront.net
 .dg0hrtzcus4q4.cloudfront.net
 .dg6gu9iqplusg.cloudfront.net
 .dg7k1tpeaxzcq.cloudfront.net
