--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-11 10:00:19
-# Total rules: 5111
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-12 16:23:59
+# Total rules: 5112
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -1020,6 +1020,7 @@
 .cryweb.github.io
 .csi.gstatic.com
 .csp-reporting.cloudflare.com
+.csp.godaddy.com
 .cstm.baidu.com
 .ctobsnssdk.com
 .ctr.hd.sohu.com
