--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-12 16:23:59
-# Total rules: 5112
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-13 10:40:06
+# Total rules: 5118
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -399,6 +399,7 @@
 .al.autohome.com.cn
 .aladdinupdate.blackrock.com
 .alb.reddit.com
+.alexa-hybrid-interaction-log-config-prod-na.s3.amazonaws.com
 .alexa-mobile-analytics-configuration-prod.s3.amazonaws.com
 .alexa-sitestats.s3.amazonaws.com
 .alimama.alicdn.com
@@ -1101,6 +1102,7 @@
 .d14osandwrs90r.cloudfront.net
 .d14p8nzdvd75ly.cloudfront.net
 .d14pdm1b7fi5kh.cloudfront.net
+.d14x46ho6sn9yf.cloudfront.net
 .d14zhsq5aop7ap.cloudfront.net
 .d154nw1c88j0q6.cloudfront.net
 .d15bcy38hlba76.cloudfront.net
@@ -1212,6 +1214,7 @@
 .d1djrodi2reo2w.cloudfront.net
 .d1dli2tyorled9.cloudfront.net
 .d1dqwj4dc78lwy.cloudfront.net
+.d1dtl43j681tft.cloudfront.net
 .d1e28xq8vu3baf.cloudfront.net
 .d1e3vw6pz2ty1m.cloudfront.net
 .d1e51ovcxdu97v.cloudfront.net
@@ -1505,6 +1508,7 @@
 .d21rpkgy8pahcu.cloudfront.net
 .d21rudljp9n1rr.cloudfront.net
 .d21uwl37pca4oi.cloudfront.net
+.d21uxxljl9m8ns.cloudfront.net
 .d21y75miwcfqoq.cloudfront.net
 .d2222t5nvb13ei.cloudfront.net
 .d223xrf0cqrzzz.cloudfront.net
@@ -2498,6 +2502,7 @@
 .dihutyaiafuhr.cloudfront.net
 .dil4q0t0blrf8.cloudfront.net
 .dilvyi2h98h1q.cloudfront.net
+.diqftdf1fp8u.cloudfront.net
 .dir.minigame.qq.com
 .direct-events-collector.spot.im
 .disableadblock.com
@@ -3713,6 +3718,7 @@
 .metrics.npr.org
 .metrics.redhat.com
 .metrics.roblox.com
+.metrics.sciencedirect.com
 .metrics.sky.com
 .metrics.ted.com
 .metrics.theatlantic.com
