--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-13 10:40:06
-# Total rules: 5118
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-14 20:35:10
+# Total rules: 5124
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -981,6 +981,7 @@
 .count.video.sina.com.cn
 .count.vrs.sohu.com
 .count5.pconline.com.cn
+.counter-mdpr.freetls.fastly.net
 .counter.csdn.net
 .counter.ksosoft.com
 .counter.people.cn
@@ -1523,6 +1524,7 @@
 .d22v2nmahyeg2a.cloudfront.net
 .d22xmn10vbouk4.cloudfront.net
 .d22z575k8abudv.cloudfront.net
+.d232dy72shugnx.cloudfront.net
 .d235m8fpdlskx9.cloudfront.net
 .d236v5t33fsfwk.cloudfront.net
 .d239g0z67jcted.cloudfront.net
@@ -2019,6 +2021,7 @@
 .d3cl7ldsgbm5qu.cloudfront.net
 .d3cod80thn7qnd.cloudfront.net
 .d3cpib6kv2rja7.cloudfront.net
+.d3cwzq09n68ejj.cloudfront.net
 .d3cxv97fi8q177.cloudfront.net
 .d3cynajatn2qbc.cloudfront.net
 .d3d0wndor0l4xe.cloudfront.net
@@ -2232,6 +2235,7 @@
 .d3vw4uehoh23hx.cloudfront.net
 .d3vw74hiy9xqtm.cloudfront.net
 .d3x0jb14w6nqz.cloudfront.net
+.d3yl7tmbqe1mq.cloudfront.net
 .d3zd5ejbi4l9w.cloudfront.net
 .d4.sina.com.cn
 .d4.sinaimg.cn
@@ -4250,6 +4254,7 @@
 .review.gdtimg.com
 .rg-3tn.pages.dev
 .rh.qq.com
+.rhaphaecelts.com
 .rich.qq.com
 .richmedia.video.qq.com
 .richmedia.yimg.com
@@ -4805,6 +4810,7 @@
 .tyh.taobao.com
 .typekit.net
 .tz.sec.xiaomi.com
+.tzm.px-cloud.net
 .u-x.jd.com
 .u.x.jd.com
 .u1.img.mobile.sina.cn
