--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-17 10:09:20
-# Total rules: 5124
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-18 10:59:26
+# Total rules: 5080
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -132,7 +132,6 @@
 .ad2.sina.com.cn
 .ad3.sina.com.cn
 .ad4.sina.com.cn
-.ad4point.nyc3.digitaloceanspaces.com
 .ad5.sina.com.cn
 .ada.baidu.com
 .adagiobanner.s3.amazonaws.com
@@ -404,12 +403,10 @@
 .alexa-sitestats.s3.amazonaws.com
 .alimama.alicdn.com
 .alime-pic.oss-cn-hangzhou.aliyuncs.com
-.alindflepkaty14.pages.dev
 .alipaylog.com
 .alissl.ucdl.pp.uc.cn
 .alitui.weibo.com
 .aliunion.cn.yahoo.com
-.aliyaoberbrunnergreg21.myshopify.com
 .als-svc.nytimes.com
 .amazon-adsystem.amazon.com
 .amazon-adsystem.com
@@ -579,8 +576,6 @@
 .apsrgeo.amap.com
 .apv-launcher.minute.ly
 .arc1.msn.com
-.arduino.uk.eu.org
-.arnoldgloverruss58.myshopify.com
 .as.baidu.com
 .as.webmd.com
 .as1.wenku.baidu.com
@@ -627,9 +622,6 @@
 .baidutv.baidu.com
 .baifen.music.baidu.com
 .baikebcs.bdimg.com
-.baltic-pipe-finansowy.blogspot.com
-.baltic79.wordpress.com
-.balticpipe.wordpress.com
 .bam-x.com
 .banlv.baidu.com
 .banner.alimama.com
@@ -671,7 +663,6 @@
 .bidswitch.net
 .bingads.microsoft.com
 .binocule21c.merriam-webster.com
-.binomo2.zendesk.com
 .bitcasino365.b-cdn.net
 .biz.weibo.com
 .bj.bcebos.com
@@ -724,7 +715,6 @@
 .bordeaux.futurecdn.net
 .boscdn.bpc.baidu.com
 .boxai-structured-data-slice-formal-1258344701.cos.ap-guangzhou.myqcloud.com
-.bradcroninnapo82.myshopify.com
 .branch-areena.yle.fi
 .branch-uutisvahti.yle.fi
 .branch-ylefi.yle.fi
@@ -807,7 +797,6 @@
 .c.yes.youku.com
 .c.za.msn.com
 .c00.adobe.com
-.c0nt4ct-me.pages.dev
 .c1-stats.shopifysvc.com
 .c2shb.pubgw.yahoo.com
 .c2shb.ssp.yahoo.com
@@ -2836,7 +2825,6 @@
 .emdcadvise.eastmoney.com
 .ems.youku.com
 .enc-90128738.b-cdn.net
-.enchantestore.myshopify.com
 .entrecard.s3.amazonaws.com
 .entry.baidu.com
 .ephemeralcounters.api.roblox.com
@@ -2903,11 +2891,7 @@
 .fa.163.com
 .fa.corp.163.com
 .facai383.oss-cn-guangzhou.aliyuncs.com
-.facebook-google-15oqyxwtkremqyujsm.vercel.app
-.facebook-google-vptyyny63pwfipshmm.vercel.app
-.facebook-google-ygggvmvciad74v9lhi.vercel.app
 .fair.sogou.com
-.familygiftlove.myshopify.com
 .fanxing.kugou.com
 .fav.simba.taobao.com
 .fc-feed.cdn.bcebos.com
@@ -2933,7 +2917,6 @@
 .files2.sogou.com
 .fileserverpcdn.cdn.huya.com
 .fingerprinter-production.herokuapp.com
-.finnews7.wordpress.com
 .fioricet-online.blogspot.com
 .firebase.googleapis.com
 .firebasedynamiclinks.googleapis.com
@@ -2952,7 +2935,6 @@
 .fm.qzone.qq.com
 .fodder.qq.com
 .fodder.tc.qq.com
-.folkrbvi.pages.dev
 .fonts.googleapis.com
 .forex-trading-benefits.blogspot.com
 .forms-emea.lenovo.com
@@ -2969,7 +2951,6 @@
 .fpnpmcdn.net
 .fpt.microsoft.com
 .free-cdn.oss-cn-shanghai.aliyuncs.com
-.freebitcoin.pages.dev
 .freewheel-mtgx-tv.akamaized.net
 .fs-client-logger.herokuapp.com
 .fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com
@@ -2977,7 +2958,6 @@
 .ftwo-receiver.autohome.com.cn
 .fullstory.com
 .fundingchoicesmessages.google.com
-.funker530-ads.azurewebsites.net
 .fuse.forbes.com
 .fusion.qq.com
 .fw.qq.com
@@ -3016,7 +2996,6 @@
 .gdt.qq.com
 .gecko.snssdk.com
 .geek-nerd-server.firebaseapp.com
-.geekupdates.notion.site
 .gemini.yahoo.com
 .gen.alicdn.com
 .geo.adobe.com
@@ -3040,7 +3019,6 @@
 .ggtp-1255424916.cos.ap-chengdu.myqcloud.com
 .gigachadlitics.b-cdn.net
 .gimg.baidu.com
-.gimp.zendesk.com
 .giocdn.com
 .gj.mmstat.com
 .gjapplog.uc.cn
@@ -3126,7 +3104,6 @@
 .hdtu.oss-cn-beijing.aliyuncs.com
 .heads-fa.spotify.com
 .health-metrics-api.setapp.com
-.helpnanacenter.helpscoutdocs.com
 .heoads.b-cdn.net
 .hesads.akamaized.net
 .hiad.vmall.com
@@ -3239,7 +3216,6 @@
 .httpdns.music.163.com
 .httpdns.n.netease.com
 .httpdns.ocloud.heytapmobi.com
-.httpdns.push.heytapmobi.com
 .httpdns.yunxindns.com
 .httpdnsvip.meituan.com
 .httpring.qq.com
@@ -3259,7 +3235,6 @@
 .hydra.alibaba.com
 .hydro-ma-proxy.akamaized.net
 .hydrocodone-buy-online.blogspot.com
-.hyndtren25.pages.dev
 .hz.mmstat.com
 .hz.youku.com
 .i.isnssdk.com
@@ -3286,7 +3261,6 @@
 .iadworkbench.apple.com
 .iam-rum-intake.datadoghq.com
 .ic.ksosoft.com
-.icelandclothing.myshopify.com
 .ichannel.isnssdk.com
 .ichnaea-web.netflix.com
 .ichnaea.dradis.netflix.com
@@ -3351,7 +3325,6 @@
 .in.yimg.com
 .incoming-telemetry.thunderbird.net
 .indexww.com
-.indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
 .info-fsi.stanford.edu
@@ -3370,7 +3343,6 @@
 .insitez.blob.core.windows.net
 .install.kugou.com
 .install2.kugou.com
-.instant-e-app-for-campaign.github.io
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
@@ -3435,7 +3407,7 @@
 .kaan.kakao.com
 .kaiser-impact.pages.dev
 .kape.dataplane.rudderstack.com
-.karanpcofficial.blogspot.com
+.kcqoej.roborock.com
 .kde.qq.com
 .kepler.jd.com
 .kgipadstat.kugou.com
@@ -3563,7 +3535,6 @@
 .logupdate.avlyun.sec.miui.com
 .logwebs.kugou.com
 .logx.optimizely.com
-.look-like-star.myshopify.com
 .lp.americas.business.samsung.com
 .lp.apac.business.samsung.com
 .lp.b2bmail.adobe.com
@@ -3645,7 +3616,6 @@
 .mads.amazon.com
 .magsrv.com
 .mail-ads.google.com
-.mail-cytanet.pages.dev
 .mailmunch.s3.amazonaws.com
 .maliva-mcs.byteoversea.com
 .mall.csdn.net
@@ -3819,7 +3789,6 @@
 .msg.mobile.kugou.com
 .msg.youku.com
 .msite.baidu.com
-.mslfgl434.pages.dev
 .msmetrics.ws.sonos.com
 .msoftdl.360.cn
 .mssdk-sg.byteoversea.com
@@ -3834,7 +3803,6 @@
 .mtj.baidu.com
 .mtrace.qq.com
 .mtrcs.redhat.com
-.mujib-store28.blogspot.com
 .mum.alibabachengdun.com
 .mvads.kugou.com
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
@@ -3843,7 +3811,6 @@
 .myaccount.nytimes.com
 .mybbc-analytics.files.bbci.co.uk
 .myes.youku.com
-.myhandshops.myshopify.com
 .mythdev.b-cdn.net
 .n.3g.163.com
 .na1r.services.adobe.com
@@ -3885,7 +3852,6 @@
 .norma-external-collect.meizu.com
 .notes-analytics-events.apple.com
 .notice.game.xiaomi.com
-.notify-user-adjustments.vercel.app
 .notify.bugsnag.com
 .notify.wps.cn
 .notify6.com
@@ -4102,7 +4068,6 @@
 .podcast.e.adobe.com
 .polaris.zijieapi.com
 .policy.jd.com
-.polish-money-matters.blogspot.com
 .popcashjs.b-cdn.net
 .popin.cc
 .popme.163.com
@@ -4269,7 +4234,6 @@
 .rmgdapfnccsharpprd.azurewebsites.net
 .rmoeu.mercury.sogou.com
 .rmonitor.qq.com
-.robalmeister.workers.dev
 .romeccs.microsoft.com
 .router.bittorrent.com
 .routertips.video.qq.com
@@ -4313,7 +4277,6 @@
 .sam.msn.com
 .same.eastmoney.com
 .sapi.sina.cn
-.saveeeee.myshopify.com
 .saveu5-normal-lq.zijieapi.com
 .sax.mobile.sina.cn
 .sax.sina.cn
@@ -4411,7 +4374,6 @@
 .showwxml.qq.com
 .shukriya90.com
 .shuzilm.cn
-.shy-boat-90ce.jiko728928922.workers.dev
 .sia.internet.apps.samsung.com
 .siftscience.com
 .sigma.baidu.com
@@ -4467,7 +4429,6 @@
 .soft.data.weather.360.cn
 .soft.tbs.imtt.qq.com
 .softstart.kugou.com
-.software19797.blogspot.com
 .somni.istockphoto.com
 .soup.v.qq.com
 .soxnwz.lg.com
@@ -4576,7 +4537,6 @@
 .statt-collect.herokuapp.com
 .statwup.huya.com
 .stdl.qq.com
-.stingcool-com.myshopify.com
 .stockbook-ads.firebaseapp.com
 .stockbook-ads.firebaseio.com
 .stocks-analytics-events.apple.com
@@ -4637,7 +4597,6 @@
 .target.microsoft.com
 .targetemsecure.blob.core.windows.net
 .targetlr.adobe.com
-.tartannewzealand.myshopify.com
 .tat.pandora.xiaomi.com
 .tattle.api.osano.com
 .tbsrecovery.imtt.qq.com
@@ -4649,7 +4608,6 @@
 .tdrec.youku.com
 .techain.baidu.com
 .techprovider.intel.com
-.telegramweb.vercel.app
 .telemetrics.klaviyo.com
 .telemetry-coverage.mozilla.org
 .telemetry.adobe.io
@@ -4785,7 +4743,6 @@
 .trap.skype.com
 .treatment.grammarly.com
 .trends.mobile.sina.cn
-.treverschmelerkris18.myshopify.com
 .trgfx.b-cdn.net
 .trkcmb.business.hsbc.com.hk
 .trkgbm.business.hsbc.com.hk
@@ -4839,7 +4796,6 @@
 .ulog-sdk.gifshow.com
 .ulog.imap.baidu.com
 .ulogjs.gifshow.com
-.ultimate-tech-products.myshopify.com
 .um-public-panel-prod.s3.amazonaws.com
 .um.hd.sohu.com
 .umdc.aliapp.org
@@ -4954,7 +4910,6 @@
 .w.gdown.baidu.com
 .w.m.taobao.com
 .w.x.baidu.com
-.w0-eg-d12-de-yd-nka-ne-rklkyazwo0.vercel.app
 .w2g-ping.b-cdn.net
 .w3-reporting-nel.reddit.com
 .w3-reporting.reddit.com
@@ -5119,6 +5074,7 @@
 api-js.mixpanel.com
 dns.wechat.com
 hd.xiaojukeji.com
+httpdns.push.heytapmobi.com
 httpdns.volces.com
 js.iterable.com
 lgtvsdp.com
