--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-18 10:59:26
-# Total rules: 5080
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-18 11:03:48
+# Total rules: 5081
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -1745,6 +1745,7 @@
 .d2o8i1jpfoso49.cloudfront.net
 .d2oa97wrxvxm7y.cloudfront.net
 .d2ob4whwpjvvpa.cloudfront.net
+.d2ob6t3bgjo11t.cloudfront.net
 .d2od2b2huvmzuj.cloudfront.net
 .d2oh4tlt9mrke9.cloudfront.net
 .d2ohmkyg5w2c18.cloudfront.net
