--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-18 11:03:48
-# Total rules: 5081
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-18 13:40:35
+# Total rules: 5143
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -43,6 +43,7 @@
 .a-reporting.nytimes.com
 .a.baidinet.com
 .a.baidu.com
+.a.ckm.iqiyi.com
 .a.hcaptcha.com
 .a.hl.mi.com
 .a.market.xiaomi.com
@@ -106,6 +107,8 @@
 .ad.intl.xiaomi.com
 .ad.jia.360.cn
 .ad.kakao.com
+.ad.kakaocorp.com
+.ad.m.iqiyi.com
 .ad.mail.sohu.com
 .ad.mi.com
 .ad.mobile.youku.com
@@ -118,6 +121,7 @@
 .ad.sina.com.cn
 .ad.sohu.com
 .ad.thepaper.cn
+.ad.toutiao.com
 .ad.us.sinaimg.cn
 .ad.v3mh.com
 .ad.weibo.com
@@ -234,6 +238,7 @@
 .ads.csdn.net
 .ads.economist.com
 .ads.eu.msn.com
+.ads.game.iqiyi.com
 .ads.google.com
 .ads.heytapmobi.com
 .ads.imgur.com
@@ -301,6 +306,7 @@
 .adsfs-sdkconfig.heytapimage.com
 .adsfs.heytapimage.com
 .adsgroup.qq.com
+.adshare.toutiao.com
 .adshmct.qq.com
 .adshmmsg.qq.com
 .adshows.21cn.com
@@ -332,6 +338,7 @@
 .adsview2.qq.com
 .adsyndication.msn.com
 .adtago.s3.amazonaws.com
+.adtech.yahooinc.com
 .adtechvideo.s3.amazonaws.com
 .adthrive.com
 .adtng.com
@@ -376,6 +383,7 @@
 .affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
+.afp.iqiyi.com
 .afpeng.alimama.com
 .afpmm.alicdn.com
 .afpssp.alimama.com
@@ -434,6 +442,7 @@
 .analytics.adobe.io
 .analytics.algolia.com
 .analytics.archive.org
+.analytics.atlassian.com
 .analytics.aweber.com
 .analytics.bigdata.samsung.com
 .analytics.bloomberg.com
@@ -442,6 +451,7 @@
 .analytics.cloud.coveo.com
 .analytics.cloud.unity3d.com
 .analytics.cnblogs.com
+.analytics.dashboard.fingerprint.com
 .analytics.githubassets.com
 .analytics.global.sky.com
 .analytics.google.com
@@ -532,6 +542,7 @@
 .api.waptest.taobao.com
 .api.youqian.baidu.com
 .api5-normal-quic-lf.ixigua.com
+.apisgame.iqiyi.com
 .apmplus.ap-southeast-1.volces.com
 .apoll.m.taobao.com
 .app-ads-services.com
@@ -590,6 +601,7 @@
 .atm.youku.com
 .atom-log.3.cn
 .atsmetrics.adobe.com
+.atsod.launch.liveramp.com
 .atwola.com
 .aty.hd.sohu.com
 .aty.sohu.com
@@ -762,6 +774,7 @@
 .c.dk.msn.com
 .c.es.msn.com
 .c.fi.msn.com
+.c.fingerprint.com
 .c.fr.msn.com
 .c.gj.qq.com
 .c.gr.msn.com
@@ -792,6 +805,7 @@
 .c.th.msn.com
 .c.tr.msn.com
 .c.tw.msn.com
+.c.uaa.iqiyi.com
 .c.uk.msn.com
 .c.wired.com
 .c.yes.youku.com
@@ -812,6 +826,7 @@
 .capture.condenastdigital.com
 .carbonads.com
 .carrick-ui.advoncommerce.com
+.cars.toutiao.com
 .casalemedia.com
 .catalog.video.msn.com
 .cb.baidu.com
@@ -867,6 +882,7 @@
 .clarium.global.ssl.fastly.net
 .classify-client.services.mozilla.com
 .clc.stackoverflow.com
+.clck.dzen.ru
 .cleaner.baidu.com
 .click.aliyun.com
 .click.bes.baidu.com
@@ -897,11 +913,13 @@
 .clouderrorreporting.googleapis.com
 .cloudflareinsights.com
 .cloudfront-labs.amazonaws.com
+.cloudpush.iqiyi.com
 .cltgtstor001.blob.core.windows.net
 .cm.baidu.com
 .cm.bilibili.com
 .cm.jd.com
 .cm.p4p.cn.yahoo.com
+.cm.passport.iqiyi.com
 .cmap.alibaba.com
 .cmc.tanx.com
 .cmp-static.nature.com
@@ -1017,6 +1035,7 @@
 .ctr.hd.sohu.com
 .curiosity-seven.vercel.app
 .customad.cnn.com
+.customer.io
 .customerevents.dradis.netflix.com
 .customerevents.netflix.com
 .cxense.com
@@ -1026,6 +1045,7 @@
 .d.kugou.com
 .d.reddit.com
 .d.skk.moe
+.d.toutiao.com
 .d0.sina.com.cn
 .d0.sinaimg.cn
 .d00.sina.com.cn
@@ -2444,6 +2464,7 @@
 .dev-push.m.youku.com
 .dev.email-signify.cjm.adobe.com
 .dev.visualwebsiteoptimizer.com
+.developer.toutiao.com
 .devgottia.github.io
 .device-metrics-us-2.amazon.com
 .device-metrics-us.amazon.com
@@ -2554,9 +2575,11 @@
 .dltvkwr7nbdlj.cloudfront.net
 .dlvds9i67c60j.cloudfront.net
 .dlxk2dj1h3e83.cloudfront.net
+.dm-hl.toutiao.com
 .dm.bytedance.com
 .dm.isnssdk.com
 .dm.pstatp.com
+.dm.toutiao.com
 .dm0acvguygm9h.cloudfront.net
 .dm0ly9ibqkdxn.cloudfront.net
 .dm0t14ck8pg86.cloudfront.net
@@ -2594,6 +2617,7 @@
 .dnn506yrbagrg.cloudfront.net
 .dnre5xkn2r25r.cloudfront.net
 .dns.jd.com
+.dns.qiyipic.iqiyi.com
 .dns.weibo.cn
 .dns.weixin.qq.com
 .dns.weixin.qq.com.cn
@@ -2611,6 +2635,7 @@
 .dog89nqcp3al4.cloudfront.net
 .dogo.intel.com
 .doh.dns.apple.com
+.doh.iqiyi.com
 .doinntz6jwzoh.cloudfront.net
 .dojx47ab4dyxi.cloudfront.net
 .dojy0dg181308.cloudfront.net
@@ -2680,6 +2705,7 @@
 .dsp.ali213.net
 .dsp.fcbox.com
 .dsp.simba.taobao.com
+.dsp.toutiao.com
 .dspsdk.pinduoduo.com
 .dsuyzexj3sqn9.cloudfront.net
 .dt.xfyun.cn
@@ -2812,7 +2838,9 @@
 .eiv.baidu.com
 .eizzih.com
 .eldoradottfha.dataplane.rudderstack.com
+.eloqua-tracking.unity.com
 .eloqua-tracking.unity3d.com
+.eloqua-trackings.unity.com
 .eloqua-trackings.unity3d.com
 .elq.blackrock.com
 .elq.redhat.com
@@ -2820,10 +2848,12 @@
 .elqtrk.thailand.intel.com
 .elqtrkstg.intel.com
 .em.baidu.com
+.email.everyonesocial.unity.com
 .email.social.qualtrics.com
 .embeds.beehiiv.com
 .emdcadvertise.eastmoney.com
 .emdcadvise.eastmoney.com
+.emoticon.sns.iqiyi.com
 .ems.youku.com
 .enc-90128738.b-cdn.net
 .entrecard.s3.amazonaws.com
@@ -2867,7 +2897,9 @@
 .events.framer.com
 .events.iap.unity3d.com
 .events.launchdarkly.com
+.events.mapbox.com
 .events.mz.unity3d.com
+.events.pingan.com
 .events.reddit.com
 .events.release.narrativ.com
 .events.squarespace.com
@@ -2949,6 +2981,7 @@
 .fpa-events.arstechnica.com
 .fpapi.io
 .fpb.sohu.com
+.fpc.fingerprint.com
 .fpnpmcdn.net
 .fpt.microsoft.com
 .free-cdn.oss-cn-shanghai.aliyuncs.com
@@ -2987,6 +3020,7 @@
 .game.weibo.com
 .gamebox.360.cn
 .gamebox.kugou.com
+.gamecenter.iqiyi.com
 .gamex.mobile.youku.com
 .ganon.yahoo.com
 .gatecollect.kugou.com
@@ -3092,9 +3126,11 @@
 .h.msn.com
 .h1.msn.com
 .h2.msn.com
+.h5.game.iqiyi.com
 .h5.isnssdk.com
 .h5.mse.360.cn
 .h5.youzan.com
+.haddock.affilimate.com
 .haitaoad.nosdn.127.net
 .haiwai-ic.ksosoft.com
 .hao.uc.cn
@@ -3200,6 +3236,7 @@
 .hoplink.ksosoft.com
 .hot.browser.miui.com
 .hotapi-va.isnssdk.com
+.hotchat-im.iqiyi.com
 .hotupgrade.hpplay.cn
 .hpd.baidu.com
 .hs-scripts.com
@@ -3275,6 +3312,7 @@
 .ieonline.microsoft.com
 .ieonlinews.microsoft.com
 .if.mingxing.qq.com
+.ifacelog.iqiyi.com
 .ifs.tanx.com
 .igexin.com
 .ikcode.baidu.com
@@ -3340,6 +3378,7 @@
 .inmobi.com
 .inside.bitcomet.com
 .insight.ucweb.com
+.insights.affilimate.com
 .insights.algolia.io
 .insitez.blob.core.windows.net
 .install.kugou.com
@@ -3358,6 +3397,7 @@
 .intlsucus.ucweb.com
 .iob.imgur.com
 .ios-informationplatform.wps.cn
+.ip.geo.iqiyi.com
 .ip.taobao.com
 .ip.ws.126.net
 .ir.mail.163.com
@@ -3475,6 +3515,7 @@
 .log.avlyun.sec.intl.miui.com
 .log.byteoversea.com
 .log.cookieyes.com
+.log.dzen.ru
 .log.fc.yahoo.com
 .log.geetest.com
 .log.intellimize.co
@@ -3642,6 +3683,7 @@
 .mazu.3g.qq.com
 .mazu.m.qq.com
 .mazu.sec.miui.com
+.mbdlog.iqiyi.com
 .mbs.hao.360.cn
 .mc.yandex.ru
 .mcdn.bilivideo.cn
@@ -3774,6 +3816,7 @@
 .monitor.qq.com
 .mononoteapp.firebaseio.com
 .monorail-edge.shopifysvc.com
+.monsetting.toutiao.com
 .mostat.wps.cn
 .mountain.zhidao.baidu.com
 .moupdate10332052.wps.cn
@@ -3784,11 +3827,14 @@
 .mqqad.html5.qq.com
 .mqqadr.reader.qq.com
 .mqtt.zhihu.com
+.ms.dzen.ru
 .ms.yandex.ru
 .msadsscale.azureedge.net
 .msedge.net
+.msg.iqiyi.com
 .msg.mobile.kugou.com
 .msg.youku.com
+.msga.cupid.iqiyi.com
 .msite.baidu.com
 .msmetrics.ws.sonos.com
 .msoftdl.360.cn
@@ -3818,11 +3864,13 @@
 .na2m-pr.licenses.adobe.com
 .nadvideo2.baidu.com
 .nativead.s3.amazonaws.com
+.nativeapp.toutiao.com
 .nbc-jite.nbcuni.com
 .nbcollect.kugou.com
 .nbcollectretry.kugou.com
 .nbsdk-baichuan.alicdn.com
 .nbsdk-baichuan.taobao.com
+.ndct-data.video.iqiyi.com
 .neirong.baidu.com
 .net.mydays.de
 .netapm.music.163.com
@@ -3844,6 +3892,7 @@
 .nhtradecfg.eastmoney.com
 .ninja.akamaized.net
 .nitrous-analytics.s3.amazonaws.com
+.nl-rcd.iqiyi.com
 .nmetrics.samsung.com
 .nmetrics.samsungmobile.com
 .nmtracking.netflix.com
@@ -3925,6 +3974,7 @@
 .openx.net
 .ophan.theguardian.com
 .opoxv.com
+.opportunarch.iqiyi.com
 .optaim.com
 .optanon.blob.core.windows.net
 .optimize.google.com
@@ -3982,12 +4032,14 @@
 .pangolin-sdk-toutiao1.com
 .pangolin.snssdk.com
 .pangolin16.isnssdk.com
+.paopao.iqiyi.com
 .papi.look.360.cn
 .par02p.wns.windows.com
 .pardot.com
 .parking.godaddy.com
 .parkingcrew.net
 .parsely.com
+.partner.toutiao.com
 .partnerad.l.google.com
 .passport-log.youku.com
 .pay.mobile.sina.cn
@@ -4069,6 +4121,7 @@
 .podcast.e.adobe.com
 .polaris.zijieapi.com
 .policy.jd.com
+.policy.video.iqiyi.com
 .popcashjs.b-cdn.net
 .popin.cc
 .popme.163.com
@@ -4106,6 +4159,8 @@
 .puds.test.uae.uc.cn
 .puds.ucweb.com
 .pull.push.sogou.com
+.puma-api.iqiyi.com
+.puma.api.iqiyi.com
 .pups.baidu.com
 .pups.bdimg.com
 .push.m.youku.com
@@ -4390,6 +4445,7 @@
 .slb-p2p.vcloud.ks-live.com
 .slog.sina.cn
 .slog.sina.com.cn
+.sm.toutiao.com
 .smadex.com
 .smartshare.lgtvsdp.com
 .smetric.ads.microsoft.com
@@ -4500,6 +4556,7 @@
 .static-tracking.klaviyo.com
 .static.addtoany.com
 .static.alimama.com
+.static.g.iqiyi.com
 .static.ku6.com
 .static.map.bdimg.com
 .static.narrativ.com
@@ -4583,6 +4640,7 @@
 .t10.baidu.com
 .t11.baidu.com
 .t12.baidu.com
+.t7z.cupid.iqiyi.com
 .ta.qq.com
 .ta.trs.cn
 .taboola.com
@@ -4614,6 +4672,7 @@
 .telemetry.adobe.io
 .telemetry.algolia.com
 .telemetry.dropbox.com
+.telemetry.dzen.ru
 .telemetry.microsoft.com
 .telemetry.mozilla.org
 .telemetry.soundcloud.com
@@ -4672,6 +4731,7 @@
 .tnc3-bjlgy.snssdk.com
 .tnc3-bjlgy.zijieapi.com
 .tns.simba.taobao.com
+.togame.iqiyi.com
 .toggle.qq.com
 .token.safebrowsing.apple
 .tongji-res.meizu.com
@@ -4686,6 +4746,7 @@
 .top.h.qhimg.com
 .toruk.tanx.com
 .tp2p.kg.qq.com
+.tpa-hcdn.iqiyi.com
 .tpi-app.herokuapp.com
 .tpstelemetry.tencent.com
 .tpush.html5.qq.com
@@ -5054,6 +5115,7 @@
 .yt-adp.nosdn.127.net
 .yt-adp.ws.126.net
 .yt.mmstat.com
+.yuedu.iqiyi.com
 .yule.sohu.com
 .yun-hl.3g.qq.com
 .yybx.oss-cn-hangzhou.aliyuncs.com
