--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-18 13:40:35
-# Total rules: 5143
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-18 14:30:12
+# Total rules: 5144
 
 .0a0d-d3l1vr.b-cdn.net
 .0lovespells0.blogspot.com
@@ -140,6 +140,7 @@
 .ada.baidu.com
 .adagiobanner.s3.amazonaws.com
 .adalyser.com
+.adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
 .adash.m.taobao.com
@@ -3391,6 +3392,7 @@
 .inte.sohu.com
 .intellimizeio.com
 .intelpartneralliance.intel.com
+.intensedebate.com
 .interest.mix.sina.com.cn
 .intergient.com
 .internal-e.posthog.com
@@ -3446,7 +3448,6 @@
 .jzt.jd.com
 .k8s-adserver-adserver-4b35ec6a1d-815734624.us-east-1.elb.amazonaws.com
 .kaan.kakao.com
-.kaiser-impact.pages.dev
 .kape.dataplane.rudderstack.com
 .kcqoej.roborock.com
 .kde.qq.com
