--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-23 19:24:20
-# Total rules: 3561
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-23 21:26:16
+# Total rules: 3566
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -23,6 +23,7 @@
 .a.stat.xiaomi.com
 .a.tanx.com
 .a0.app.xiaomi.com
+.a8bea9eb5d.com
 .aan.amazon.com
 .abtest-ch.snssdk.com
 .abtest.alibaba.com
@@ -231,6 +232,7 @@
 .airlytics.airlock.twcmobile.weather.com
 .aixuntupian.oss-cn-hongkong.aliyuncs.com
 .ak-events-collector.spot.im
+.akxmagzkoo.com
 .alexa-hybrid-interaction-log-config-prod-na.s3.amazonaws.com
 .alexa-mobile-analytics-configuration-prod.s3.amazonaws.com
 .alexa-sitestats.s3.amazonaws.com
@@ -2975,6 +2977,7 @@
 .proxy.sec.miui.com
 .ps.map.baidu.com
 .psh-static.b-cdn.net
+.ptelastaxo.com
 .pub-549d59daefd74f7583e1766800fe7b07.r2.dev
 .pub-81f2b77f5bc841c5ae64221394d67f53.r2.dev
 .pub-algeriatenders.s3.eu-central-1.amazonaws.com
@@ -3010,6 +3013,7 @@
 .r.browser.miui.com
 .r.release.qq.com
 .ra.gtimg.com
+.ra10.xyz
 .rad.microsoft.com
 .rapid-glade-cde8.asoumare042024.workers.dev
 .rcgi.video.qq.com
@@ -3226,6 +3230,7 @@
 .statsfe2.ws.microsoft.com
 .statsig.anthropic.com
 .stdl.qq.com
+.stikroltiltoowi.net
 .stingcool-com.myshopify.com
 .stocks-analytics-events.apple.com
 .store.tv.api.3g.youku.com
