--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-23 21:26:16
-# Total rules: 3566
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-24 08:31:07
+# Total rules: 3612
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -90,6 +90,7 @@
 .adboss.qzone.qq.com
 .adbox.sina.com.cn
 .adbs.ximalaya.com
+.adconsent.samsungrs.com
 .addata.jd.com
 .adebus.oss-cn-shenzhen.aliyuncs.com
 .adfilter.imtt.qq.com
@@ -124,6 +125,7 @@
 .ads-privacy-api.prd.mz.internal.unity3d.com
 .ads-sg.tiktok.com
 .ads-static.conde.digital
+.ads-thanhnien-vn.cdn.ampproject.org
 .ads-union.jd.com
 .ads-video-al.xhscdn.com
 .ads-video-qc.xhscdn.com
@@ -180,6 +182,7 @@
 .adsrich.qq.com
 .adsrvr.org
 .adss.video.qq.com
+.adstage-analytics.herokuapp.com
 .adstat.cp11.ott.cibntv.net
 .adstatic.b-cdn.net
 .adstatic.zhihu.com
@@ -246,6 +249,7 @@
 .amdc.alipay.com
 .amdcopen.m.taobao.com
 .amplitude.com
+.amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
 .analy.qq.com
@@ -276,7 +280,10 @@
 .androidtvchannels-pa.googleapis.com
 .androidtvwatsonfe-pa.googleapis.com
 .anquan.baidu.com
+.anti-adblock.herokuapp.com
 .antivirus.baidu.com
+.anymind360-com.cdn.ampproject.org
+.ao-freegeoip.herokuapp.com
 .aod-image-material.cdn.bcebos.com
 .aod-video-antusheng.cdn.bcebos.com
 .apd-pcdnwxlogin.teg.tencent-cloud.net
@@ -344,6 +351,7 @@
 .audid-api-sg.taobao.com
 .audid-api.taobao.com
 .audio.ali.xmcdn.com
+.aurora-d3.herokuapp.com
 .auth.be.sec.miui.com
 .authbe.sec.intl.miui.com
 .ayw-tt-game.oss-cn-beijing.aliyuncs.com
@@ -478,6 +486,7 @@
 .ccclub.cmbchina.com
 .cdj-dap.s3-ap-northeast-1.amazonaws.com
 .cdn-ads.oss-cn-shanghai.aliyuncs.com
+.cdn-bongdadem-net.cdn.ampproject.org
 .cdn.ark.qq.com
 .cdn.onesignal.com
 .cdn.puata.info
@@ -527,6 +536,8 @@
 .cnzz.mmstat.com
 .collect.alipay.com
 .collect.ctc.ximalaya.com
+.collection-endpoint-prod.herokuapp.com
+.collection-endpoint-staging.herokuapp.com
 .collector-cdn.github.com
 .collector.bsg.brave.com
 .collector.dcdn.baidu.com
@@ -1872,6 +1883,7 @@
 .data-b19475ee82.weather.com
 .data-d4dfa4bc2c.weather.com
 .data-optout-service.uca.cloud.unity3d.com
+.data-saver-cindi.herokuapp.com
 .data-sdk-uuid-log.d.meituan.net
 .data-sdk-uuid-report.dreport.meituan.net
 .data.bilibili.com
@@ -2282,7 +2294,9 @@
 .entry.baidu.com
 .erebor.douban.com
 .ers.baidu.com
+.essential-apps-analytics.herokuapp.com
 .et.tanx.com
+.etahub.com
 .etg.qq.com
 .eu-mobile.events.data.microsoft.com
 .eu.business.samsung.com
@@ -2325,7 +2339,9 @@
 .fexclick.baidu.com
 .ffbbbdc6d3c353211fe2ba39c9f744cd.com
 .ffe390afd658c19dcbf707e0597b846d.de
+.filament-stats.herokuapp.com
 .file.daihuo.qq.com
+.fingerprinter-production.herokuapp.com
 .finnews7.wordpress.com
 .firebase.googleapis.com
 .firebasedynamiclinks.googleapis.com
@@ -2348,6 +2364,7 @@
 .fpa-events.arstechnica.com
 .fpt.microsoft.com
 .free-cdn.oss-cn-shanghai.aliyuncs.com
+.fs-client-logger.herokuapp.com
 .fs-uc-nearme-com-cn.oss-cn-hangzhou.aliyuncs.com
 .fundingchoicesmessages.google.com
 .fusion.qq.com
@@ -2568,6 +2585,7 @@
 .igexin.com
 .ikcode.baidu.com
 .ilive.qq.com
+.ilyonanalytics.herokuapp.com
 .im-x.jd.com
 .image.box.xiaomi.com
 .imageplus.baidu.com
@@ -2600,11 +2618,13 @@
 .info.sec.miui.com
 .info.wps.cn
 .insight.ucweb.com
+.insights.algolia.io
 .instant-e-app-for-campaign.github.io
 .int.dpool.sina.com.cn
 .intake-analytics.wikimedia.org
 .intake-logging.wikimedia.org
 .interest.mix.sina.com.cn
+.intergient.com
 .internal-e.posthog.com
 .intlsucus.ucweb.com
 .iob.imgur.com
@@ -2665,6 +2685,8 @@
 .log-hl.snssdk.com
 .log-lq.snssdk.com
 .log-verify.mob.com
+.log-vietnamplus-vn.cdn.ampproject.org
+.log.amemv.com
 .log.avlyun.sec.intl.miui.com
 .log.geetest.com
 .log.jd.com
@@ -2681,10 +2703,17 @@
 .log.waimai.baidu.com
 .log.ys7.com
 .log.zijieapi.com
+.log0-misc-alinc2.amemv.com
+.log0-misc-lf.amemv.com
+.log0-misc-lq.amemv.com
 .log1.cmpassport.com
 .log1.wtlogin.qq.com
 .log2.cmpassport.com
 .log2.sina.cn
+.log3-misc-lf.amemv.com
+.log3-misc-lq.amemv.com
+.log5-misc-lf.amemv.com
+.log5-misc-lq.amemv.com
 .logger.unsplash.com
 .loggw-ex.alipay.com
 .loggw-exsdk.alipay.com
@@ -2735,6 +2764,7 @@
 .masdk.3g.qq.com
 .masdkv6.3g.qq.com
 .master-shopify-tracker.s3.amazonaws.com
+.matomo.openstreetmap.org
 .matwbp.iask.sina.com.cn
 .mazu.3g.qq.com
 .mazu.m.qq.com
@@ -2754,6 +2784,7 @@
 .mellowads.b-cdn.net
 .mermaid.ximalaya.com
 .metok.sys.miui.com
+.metrics-cbslocal-com.cdn.ampproject.org
 .metrics-logger.spot.im
 .metrics.accuweather.com
 .metrics.apple.com
@@ -2871,6 +2902,8 @@
 .omgmta1.qq.com
 .oms.wsj.com
 .oneid.mmstat.com
+.onespot-tracking.herokuapp.com
+.onethingpcs.com
 .online-metrix.net
 .ope.tanx.com
 .opehs.tanx.com
@@ -3051,6 +3084,7 @@
 .rich.qq.com
 .richmedia.video.qq.com
 .richmedia.yimg.com
+.riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
 .rj.baidu.com
@@ -3075,6 +3109,7 @@
 .sa.api.intl.miui.com
 .sa.sina.cn
 .safebrowsing.urlsec.qq.com
+.sail-horizon.com
 .sapi.sina.cn
 .saveeeee.myshopify.com
 .saveu5-normal-lq.zijieapi.com
@@ -3092,6 +3127,7 @@
 .sax9.sina.com.cn
 .saxn.sina.com.cn
 .saxs.sina.com.cn
+.sbbanner-com.cdn.ampproject.org
 .sbeacon.sina.com.cn
 .sca.samsung.com
 .scdown.qq.com
@@ -3150,6 +3186,7 @@
 .singular.net
 .sjarvis.taobao.com
 .skdisplay.jd.com
+.slb-p2p.vcloud.ks-live.com
 .slog.sina.cn
 .slog.sina.com.cn
 .smartad.10010.com
@@ -3192,6 +3229,7 @@
 .ssl-cdn.static.browser.mi-img.com
 .ssl-google-analytics.l.google.com
 .ssp.qq.com
+.sspapi-prd.samsungrs.com
 .sstats.wired.com
 .st-fly.b-cdn.net
 .st-offlinegame.vivo.com.cn
@@ -3210,6 +3248,7 @@
 .stat.v.baidu.com
 .stat.y.qq.com
 .stat.youku.com
+.static-addtoany-com.cdn.ampproject.org
 .static-doubleclick-net.l.google.com
 .static.alimama.com
 .static.map.bdimg.com
@@ -3229,6 +3268,7 @@
 .statsfe1.ws.microsoft.com
 .statsfe2.ws.microsoft.com
 .statsig.anthropic.com
+.statt-collect.herokuapp.com
 .stdl.qq.com
 .stikroltiltoowi.net
 .stingcool-com.myshopify.com
@@ -3245,6 +3285,7 @@
 .supportmetrics.apple.com
 .survey.china.alibaba.com
 .swa.gtimg.com
+.sworkitads.herokuapp.com
 .swwwxww.oss-cn-hangzhou.aliyuncs.com
 .sxeimx.mydays.de
 .syncplusconfig.s3.amazonaws.com
@@ -3329,6 +3370,7 @@
 .top.h.qhimg.com
 .toruk.tanx.com
 .tp2p.kg.qq.com
+.tpi-app.herokuapp.com
 .tpstelemetry.tencent.com
 .tpush.html5.qq.com
 .tr.www.cloudflare.com
@@ -3358,6 +3400,8 @@
 .trading.assistant.miui.com
 .traffic.spot.im
 .trafficfuelpixel.s3-us-west-2.amazonaws.com
+.trafficjunky.com
+.trafficjunky.net
 .trends.mobile.sina.cn
 .treverschmelerkris18.myshopify.com
 .trgfx.b-cdn.net
@@ -3438,6 +3482,7 @@
 .utk.baidu.com
 .utp.ucweb.com
 .uu.qq.com
+.v9banners-com.cdn.ampproject.org
 .val.api.youku.com
 .vali-ugc.cp31.ott.cibntv.net
 .vcl-brain.snssdk.com
@@ -3536,6 +3581,7 @@
 .xpj08.oss-cn-beijing.aliyuncs.com
 .xpjcg.oss-accelerate.aliyuncs.com
 .xsolid.baidu.com
+.xycdn.com
 .xz-development.oss-cn-beijing.aliyuncs.com
 .yab-adimages.s3.amazonaws.com
 .yc-ads.s3.amazonaws.com
