--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-24 08:31:07
-# Total rules: 3612
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-24 11:46:43
+# Total rules: 3614
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -106,6 +106,7 @@
 .adm.leju.sina.com.cn
 .admarket.21cn.com
 .admarvel.s3.amazonaws.com
+.admobile.top
 .admost-banner.b-cdn.net
 .adping.qq.com
 .adpm.app.qq.com
@@ -2116,6 +2117,7 @@
 .doo6pwib3qngu.cloudfront.net
 .doo9gpa5xdov2.cloudfront.net
 .dorangesource.alicdn.com
+.doubleclick-cn.net
 .doubleclick.net
 .download-stats.mozilla.org
 .download.bav.baidu.com
