--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-24 11:46:43
-# Total rules: 3614
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-25 09:46:53
+# Total rules: 3616
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -2320,6 +2320,7 @@
 .ex.qq.com
 .ex.tanx.com
 .extlog.snssdk.com
+.f.convertkit.com
 .f.gm.mob.com
 .f10.baidu.com
 .f11.baidu.com
@@ -3202,6 +3203,7 @@
 .smetrics.samsung.com
 .smetrics.samsung.com.cn
 .smetrics.zacks.com
+.snap.licdn.com
 .sngmta.qq.com
 .snippets.mozilla.com
 .snowflake.qq.com
