--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-25 09:46:53
-# Total rules: 3616
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-25 18:34:47
+# Total rules: 3623
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -340,6 +340,7 @@
 .appsflyersdk.com
 .appsupport.qq.com
 .apsrgeo.amap.com
+.arduino.uk.eu.org
 .arnoldgloverruss58.myshopify.com
 .as.baidu.com
 .as1.wenku.baidu.com
@@ -2362,6 +2363,7 @@
 .fonts.googleapis.com
 .fourier.alibaba.com
 .fourier.taobao.com
+.fp.techinasia.com
 .fpa-api.arstechnica.com
 .fpa-cdn.arstechnica.com
 .fpa-events.arstechnica.com
@@ -2375,6 +2377,7 @@
 .fxgate.baidu.com
 .g.baidu.com
 .g.click.taobao.com
+.g.tbcdn.cn
 .ga.clearbit.com
 .gak.webtoons.com
 .gallery.pandora.xiaomi.com
@@ -2387,6 +2390,7 @@
 .gdpr-settings.s3.amazonaws.com
 .gdt.qq.com
 .gecko.snssdk.com
+.geekupdates.notion.site
 .gen.alicdn.com
 .geofence.sys.miui.com
 .geolocation.nexusmedia.workers.dev
@@ -2653,6 +2657,7 @@
 .jpushjd.m.jd.com
 .jqmt.qq.com
 .jrclick.jd.com
+.js.newrutor.eu.org
 .jsadsdisplay.cn-beijing.log.aliyuncs.com
 .jspassport.ssl.qhimg.com
 .jsqmt.qq.com
@@ -3388,6 +3393,7 @@
 .tracker.ai.xiaomi.com
 .tracker.baidu.com
 .tracker.dcdn.baidu.com
+.tracker.downdetector.com
 .tracking.agora.io
 .tracking.americas.business.samsung.com
 .tracking.apac.business.samsung.com
@@ -3614,6 +3620,7 @@ animal-graylog.happyelements.cn
 api-js.mixpanel.com
 dns.wechat.com
 httpdns.volces.com
+o2o-ad-log-gateway.alibaba.com
 resolver.mi.xiaomi.com
 ttnet-dig.feishu.cn
 ttnet-doh.feishu.cn
