--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-25 18:34:47
-# Total rules: 3623
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-26 09:36:10
+# Total rules: 3640
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -7,7 +7,6 @@
 .1wincdn.b-cdn.net
 .2016.sina.cn
 .2052.flash2-http.qq.com
-.2g312kn32qfy-1323053341.cos.ap-bangkok.myqcloud.com
 .2mdn.net
 .3site-rss.s3-ap-northeast-1.amazonaws.com
 .682a5845.b-cdn.net
@@ -15,6 +14,7 @@
 .9w2zed1szg.execute-api.us-east-1.amazonaws.com
 .Coordinator-Production-28516768.us-east-1.elb.amazonaws.com
 .a-dxk.play.api.3g.youku.com
+.a-reporting.nytimes.com
 .a.baidu.com
 .a.hcaptcha.com
 .a.hl.mi.com
@@ -23,6 +23,7 @@
 .a.stat.xiaomi.com
 .a.tanx.com
 .a0.app.xiaomi.com
+.a125375509.cdn.optimizely.com
 .a8bea9eb5d.com
 .aan.amazon.com
 .abtest-ch.snssdk.com
@@ -45,7 +46,6 @@
 .ad.browser.qq.com
 .ad.caiyunapp.com
 .ad.docer.wps.cn
-.ad.eporner.com
 .ad.intl.xiaomi.com
 .ad.mi.com
 .ad.mobile.youku.com
@@ -66,7 +66,6 @@
 .ad4.sina.com.cn
 .ad5.sina.com.cn
 .ada.baidu.com
-.adagiobanner.s3.amazonaws.com
 .adapi.foooooot.com
 .adash-c.m.taobao.com
 .adash-c.ut.taobao.com
@@ -77,6 +76,7 @@
 .adashx.m.taobao.com
 .adashx.ut.alibaba.com
 .adashx.ut.amap.com
+.adashx.ut.hzshudian.com
 .adashx.ut.taobao.com
 .adashx.ut.uc.cn
 .adashx.ut.youku.com
@@ -136,6 +136,7 @@
 .ads.google.com
 .ads.imgur.com
 .ads.mozilla.org
+.ads.nytimes.com
 .ads.prd.ie.internal.unity3d.com
 .ads.samsung.com
 .ads.tiktok.com
@@ -178,6 +179,7 @@
 .adsmind.gdtimg.com
 .adsmind.tc.qq.com
 .adsninja.b-cdn.net
+.adsninjacdn.b-cdn.net
 .adsolution.imtt.qq.com
 .adsqqclick.qq.com
 .adsrich.qq.com
@@ -221,7 +223,6 @@
 .aegis.qq.com
 .afd.baidu.com
 .afd.l.google.com
-.affiliate.googleusercontent.com
 .affim.baidu.com
 .afp.alicdn.com
 .afpeng.alimama.com
@@ -245,16 +246,19 @@
 .alissl.ucdl.pp.uc.cn
 .alitui.weibo.com
 .aliyaoberbrunnergreg21.myshopify.com
+.als-svc.nytimes.com
 .amazon-adsystem.amazon.com
 .amazon-adsystem.com
 .amdc.alipay.com
 .amdcopen.m.taobao.com
 .amplitude.com
+.ampmetrics.engadget.com
 .amptrack-dailymail-co-uk.cdn.ampproject.org
 .ams-pageview-public.s3.amazonaws.com
 .an.facebook.com
 .analy.qq.com
 .analytics-alv.google.com
+.analytics-digit-in.cdn.ampproject.org
 .analytics-prod-alb-292764149.us-west-2.elb.amazonaws.com
 .analytics-sg.tiktok.com
 .analytics.21cn.com
@@ -387,10 +391,12 @@
 .beacon.cdn.qq.com
 .beacon.dropbox.com
 .beacon.gtimg.com
+.beacon.guim.co.uk
 .beacon.netflix.com
 .beacon.qq.com
 .beacon.shazam.com
 .beacon.sina.com.cn
+.beacon.www.theguardian.com
 .beaconcdn.qq.com
 .beamanalytics.b-cdn.net
 .bes-mtj.baidu.com
@@ -490,6 +496,7 @@
 .cdn-ads.oss-cn-shanghai.aliyuncs.com
 .cdn-bongdadem-net.cdn.ampproject.org
 .cdn.ark.qq.com
+.cdn.cookielaw.org
 .cdn.onesignal.com
 .cdn.puata.info
 .cdn.tanx.com
@@ -533,7 +540,6 @@
 .cms.tanx.com
 .cms.ucweb.com
 .cmshow.gtimg.cn
-.cmweb.ilike.alibaba.com
 .cn-vmc-images.alicdn.com
 .cnzz.mmstat.com
 .collect.alipay.com
@@ -548,13 +554,16 @@
 .commdata.v.qq.com
 .commerce.bing.com
 .commondata.oss-cn-hangzhou.aliyuncs.com
+.concert.io
 .concertads-configs.vox-cdn.com
 .conf.international.baidu.com
 .config-api.internet.apps.samsung.com
 .config.ab.qq.com
 .config.uca.cloud.unity3d.com
 .consent.dropbox.com
+.contentpass.net
 .contentrecommend-out.mobile.sina.cn
+.contributions.guardianapis.com
 .cookielawblog.wordpress.com
 .coordinator.cm.bloomberg.com
 .copilot-telemetry.githubusercontent.com
@@ -590,8 +599,11 @@
 .csp-reporting.cloudflare.com
 .cstm.baidu.com
 .ctobsnssdk.com
+.cu-cn-north00001.gala.convection.cn
+.cu-cn-north00002.gala.convection.cn
 .customerevents.dradis.netflix.com
 .customerevents.netflix.com
+.cxense.com
 .d.g.mi.com
 .d.skk.moe
 .d0.sina.com.cn
@@ -1882,6 +1894,8 @@
 .darren01.oss-cn-beijing.aliyuncs.com
 .das.api.youku.com
 .das.mobile.youku.com
+.data-88ba07a559.motor1.com
+.data-9df22f196a.motor1.com
 .data-b19475ee82.weather.com
 .data-d4dfa4bc2c.weather.com
 .data-optout-service.uca.cloud.unity3d.com
@@ -1926,6 +1940,7 @@
 .dcjg1gv1px1h.cloudfront.net
 .dcv4p460uqa46.cloudfront.net
 .dczhbhtz52fpi.cloudfront.net
+.dd.nytimes.com
 .dd6ym5in4ovm3.cloudfront.net
 .dd6zx4ibq538k.cloudfront.net
 .ddacn6pr5v0tl.cloudfront.net
@@ -1949,7 +1964,6 @@
 .deisd5o6v8rgq.cloudfront.net
 .dek5iqd53g59a.cloudfront.net
 .demkc32bq01ah.cloudfront.net
-.derangedadage91wis.files.wordpress.com
 .desgao1zt7irn.cloudfront.net
 .detwzgl8cvciv.cloudfront.net
 .dev-push.m.youku.com
@@ -1996,6 +2010,7 @@
 .diagnostics.support.microsoft.com
 .dianying-1304791696.cos.ap-shanghai.myqcloud.com
 .dic9vgwbkxd8r.cloudfront.net
+.didna.b-cdn.net
 .dig.bdurl.net
 .digital-ads.s3.amazonaws.com
 .dihutyaiafuhr.cloudfront.net
@@ -2281,7 +2296,6 @@
 .ecommstats.s3.amazonaws.com
 .ecpm.tanx.com
 .edge.adobedc.net
-.edgecast-vod.yimg.com
 .eduad.baidu.com
 .ef-dongfeng.tanx.com
 .ef.opendsp.tanx.com
@@ -2298,6 +2312,7 @@
 .erebor.douban.com
 .ers.baidu.com
 .essential-apps-analytics.herokuapp.com
+.et.nytimes.com
 .et.tanx.com
 .etahub.com
 .etg.qq.com
@@ -2436,6 +2451,7 @@
 .gtmsdd.alicdn.com
 .gtrk.s3.amazonaws.com
 .guanjia.baidu.com
+.guardianapps.co.uk
 .guess.h.qhimg.com
 .guid.tpns.tencent.com
 .gvideo.qpic.cn
@@ -2446,6 +2462,7 @@
 .gz.apigw.tencentcs.com
 .h-adashx.ut.alibaba.com
 .h-adashx.ut.amap.com
+.h-adashx.ut.hzshudian.com
 .h-adashx.ut.taobao.com
 .h-adashx.ut.uc.cn
 .h-adashx.ut.youku.com
@@ -2459,6 +2476,7 @@
 .heoads.b-cdn.net
 .hijack.baidu.com
 .hilton.data.adobedc.net
+.hits.theguardian.com
 .hk.napi.ucweb.com
 .hk2.wns.windows.com
 .hk2sch130020721.wns.windows.com
@@ -2608,7 +2626,6 @@
 .imagev2.tx.xmcdn.com
 .img-dsp.oss-cn-beijing.aliyuncs.com
 .img-x.jd.com
-.img.alibaba.com
 .img.gou.wpscdn.cn
 .img.response.digicert.com
 .img1.gtimg.com
@@ -2616,7 +2633,6 @@
 .img1.sj.qq.com
 .imgstat.baidu.com
 .improving.duckduckgo.com
-.in.yimg.com
 .indianetouristvisacoin.wordpress.com
 .inf.miui.com
 .infinityid.condenastdigital.com
@@ -2755,6 +2771,7 @@
 .m.qpic.cn
 .m.simba.taobao.com
 .m1.baidu.com
+.m1tm.motor1.com
 .ma.baidu.com
 .mads-eu.amazon.com
 .mads-fe.amazon.com
@@ -2791,6 +2808,8 @@
 .mediavine.com
 .mellowads.b-cdn.net
 .mermaid.ximalaya.com
+.messaging-notifications.api.nytimes.com
+.meter-svc.nytimes.com
 .metok.sys.miui.com
 .metrics-cbslocal-com.cdn.ampproject.org
 .metrics-logger.spot.im
@@ -2799,6 +2818,7 @@
 .metrics.bloomberg.com
 .metrics.icloud.com
 .metrics.mzstatic.com
+.metrics.npr.org
 .metrics.zacks.com
 .mg.games.sina.com.cn
 .mgtv-bbqn.oss-cn-beijing.aliyuncs.com
@@ -2869,6 +2889,7 @@
 .mum.alibabachengdun.com
 .mvchallenges.s3-website-eu-west-1.amazonaws.com
 .mxpnl.com
+.myaccount.nytimes.com
 .myes.youku.com
 .myhandshops.myshopify.com
 .mythdev.b-cdn.net
@@ -2896,16 +2917,16 @@
 .nsclick.baidu.com
 .nsclickvideo.baidu.com
 .nw-umwatson.events.data.microsoft.com
+.o.isx.unity3d.com
+.o209266.ingest.us.sentry.io
 .o2o.api.xiaomi.com
 .o9tt6h08li.execute-api.eu-west-1.amazonaws.com
 .oca.microsoft.com
 .oceanengine.com
 .odc.weather.com
-.offer.alibaba.com
 .offnavi.map.baidu.com
 .ogads-pa.clients6.google.com
 .ogads-pa.googleapis.com
-.oimsgad.qq.com
 .omgid.qq.com
 .omgmta1.qq.com
 .oms.wsj.com
@@ -2921,6 +2942,7 @@
 .openjmacs4uc.m.taobao.com
 .openmonitor.alipay.com
 .openrcv.baidu.com
+.ophan.theguardian.com
 .optimize.google.com
 .optimus-ads.amap.com
 .orange-dc.youku.com
@@ -2983,7 +3005,6 @@
 .phs.tanx.com
 .pimlog.baidu.com
 .pindao.huoban.taobao.com
-.pingfore.qq.com
 .pinghot.qq.com
 .pingjs.qq.com
 .pingma.qq.com
@@ -3006,6 +3027,7 @@
 .popcashjs.b-cdn.net
 .pos.baidu.com
 .ppurifier.game.xiaomi.com
+.prd-lender.cdp.internal.unity3d.com
 .predataclient.b-cdn.net
 .presentationtracking.netflix.com
 .prodregistryv2.org
@@ -3044,9 +3066,7 @@
 .qianclick.baidu.com
 .qos.video.yimg.com
 .qqdata.ab.qq.com
-.qqlogo.qq.com
 .qqshow2-item.qq.com
-.qring-tms.qq.com
 .qss-client.qq.com
 .qvid2.b-cdn.net
 .qzs.gdtimg.com
@@ -3056,9 +3076,7 @@
 .ra.gtimg.com
 .ra10.xyz
 .rad.microsoft.com
-.rapid-glade-cde8.asoumare042024.workers.dev
 .rcgi.video.qq.com
-.rcm-images.amazon.com
 .rdstat.tanx.com
 .re.m.taobao.com
 .re.taobao.com
@@ -3091,7 +3109,6 @@
 .rh.qq.com
 .rich.qq.com
 .richmedia.video.qq.com
-.richmedia.yimg.com
 .riqhisfus.com
 .risk.clearbit.com
 .river.zhidao.baidu.com
@@ -3182,7 +3199,6 @@
 .share.baidu.com
 .shenghuo.xiaomi.com
 .shooter.m.jd.com
-.show-msgch.qq.com
 .showwxml.qq.com
 .shukriya90.com
 .shy-boat-90ce.jiko728928922.workers.dev
@@ -3205,6 +3221,8 @@
 .smetrics.flex.amazon.co.jp
 .smetrics.flex.amazon.com
 .smetrics.marketing.meethue.com
+.smetrics.npr.org
+.smetrics.onetrust.com
 .smetrics.samsung.com
 .smetrics.samsung.com.cn
 .smetrics.zacks.com
@@ -3292,7 +3310,6 @@
 .suggestion.baidu.com
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
-.survey.china.alibaba.com
 .swa.gtimg.com
 .sworkitads.herokuapp.com
 .swwwxww.oss-cn-hangzhou.aliyuncs.com
@@ -3348,7 +3365,6 @@
 .timon.zijieapi.com
 .tinglog.baidu.com
 .tiqcdn.com
-.titkoshirek.wordpress.com
 .tj.b.qq.com
 .tj.video.qq.com
 .tj.youzanyun.com
@@ -3446,7 +3462,6 @@
 .ucus.ucweb.com
 .udd1i5.zhihu.com
 .udpolimenew.baidu.com
-.uedata.amazon.com
 .ufosdk.baidu.com
 .ug.snssdk.com
 .uid.ksosoft.com
@@ -3472,7 +3487,6 @@
 .unionimage.baidu.com
 .unitacs.m.taobao.com
 .unityads.unity3d.com
-.unstat.baidu.com
 .up-hl.3g.qq.com
 .up1.tj.u2.ucweb.com
 .up4.ucweb.com
@@ -3522,6 +3536,7 @@
 .vs8.gzcu.u3.ucweb.com
 .vv.video.qq.com
 .w.gdown.baidu.com
+.w.isx.unity3d.com
 .w.m.taobao.com
 .w.x.baidu.com
 .w2g-ping.b-cdn.net
@@ -3548,6 +3563,7 @@
 .win10.ipv6.microsoft.com
 .win1710.ipv6.microsoft.com
 .win8.ipv6.microsoft.com
+.windowsphishingalert158.s3.amazonaws.com
 .winonexd.b-cdn.net
 .wisepush.video.baidu.com
 .wkclick.baidu.com
@@ -3612,6 +3628,7 @@
 .zhishituanyuanji.cdn.bcebos.com
 .zhstatic.zhihu.com
 .znsv.baidu.com
+.zqtk.net
 .zt.jd.com
 .ztd.dds.microsoft.com
 .zymo.mps.weibo.com
