--- a/REJECT-DOMAINSET.conf
+++ b/REJECT-DOMAINSET.conf
@@ -1,5 +1,5 @@
-# Generated from relevant_rules_wildcard_aware.txt on 2025-05-26 09:36:10
-# Total rules: 3640
+# Generated from relevant_rules_wildcard_aware.txt on 2025-05-26 14:59:03
+# Total rules: 3730
 
 .0a0d-d3l1vr.b-cdn.net
 .1.wps.cn
@@ -13,9 +13,11 @@
 .7ng6v3lu3c.execute-api.us-east-1.amazonaws.com
 .9w2zed1szg.execute-api.us-east-1.amazonaws.com
 .Coordinator-Production-28516768.us-east-1.elb.amazonaws.com
+.a-adx.ctrip.com
 .a-dxk.play.api.3g.youku.com
 .a-reporting.nytimes.com
 .a.baidu.com
+.a.ckm.iqiyi.com
 .a.hcaptcha.com
 .a.hl.mi.com
 .a.koudai.com
@@ -47,6 +49,7 @@
 .ad.caiyunapp.com
 .ad.docer.wps.cn
 .ad.intl.xiaomi.com
+.ad.m.iqiyi.com
 .ad.mi.com
 .ad.mobile.youku.com
 .ad.player.baidu.com
@@ -92,6 +95,7 @@
 .adbs.ximalaya.com
 .adconsent.samsungrs.com
 .addata.jd.com
+.ade-rtb.netease.com
 .adebus.oss-cn-shenzhen.aliyuncs.com
 .adfilter.imtt.qq.com
 .adgame.waimai.meituan.com
@@ -102,6 +106,7 @@
 .adj.st
 .adjust.com
 .adjust.world
+.adkwai.com
 .adm.baidu.com
 .adm.leju.sina.com.cn
 .admarket.21cn.com
@@ -133,12 +138,14 @@
 .ads.95516.com
 .ads.bing.com
 .ads.bloomberg.com
+.ads.game.iqiyi.com
 .ads.google.com
 .ads.imgur.com
 .ads.mozilla.org
 .ads.nytimes.com
 .ads.prd.ie.internal.unity3d.com
 .ads.samsung.com
+.ads.stackoverflow.com
 .ads.tiktok.com
 .ads.twitter.com
 .ads.uc.cn
@@ -198,6 +205,7 @@
 .adtago.s3.amazonaws.com
 .adtechvideo.s3.amazonaws.com
 .adtrack-intl.ucweb.com
+.adtrack.quark.cn
 .adtrack.uc.cn
 .adtrack.ucweb.com
 .adv.app.qq.com
@@ -213,6 +221,7 @@
 .adwbs.ximalaya.com
 .adx-open-service.youku.com
 .adx-static.ksosoft.com
+.adx.maplehaze.cn
 .adx.tanx.com
 .adx1js.s3.amazonaws.com
 .adxlog-adnet.vivo.com.cn
@@ -225,6 +234,7 @@
 .afd.l.google.com
 .affim.baidu.com
 .afp.alicdn.com
+.afp.iqiyi.com
 .afpeng.alimama.com
 .afpmm.alicdn.com
 .afpssp.alimama.com
@@ -263,6 +273,7 @@
 .analytics-sg.tiktok.com
 .analytics.21cn.com
 .analytics.adjust.net.in
+.analytics.archive.org
 .analytics.bigdata.samsung.com
 .analytics.bloomberg.com
 .analytics.brave.com
@@ -270,6 +281,8 @@
 .analytics.githubassets.com
 .analytics.google.com
 .analytics.googleapis.com
+.analytics.hz.netease.com
+.analytics.live.com
 .analytics.map.qq.com
 .analytics.meituan.net
 .analytics.s3.amazonaws.com
@@ -278,6 +291,7 @@
 .analytics.twitter.com
 .analytics.uca.cloud.unity3d.com
 .analytics.unity3d.com
+.analytics.us.archive.org
 .analytics.us.tiktok.com
 .analytics.zhihu.com
 .analyticsengine.s3.amazonaws.com
@@ -319,6 +333,7 @@
 .api.uca.cloud.unity3d.com
 .api.waptest.taobao.com
 .api.youqian.baidu.com
+.apisgame.iqiyi.com
 .apmplus.ap-southeast-1.volces.com
 .apoll.m.taobao.com
 .app-analytics-services.com
@@ -336,6 +351,7 @@
 .appdownload.youku.com
 .appgiftwall.oss-us-west-1.aliyuncs.com
 .applog-perf.uc.cn
+.applog.lc.quark.cn
 .applog.snssdk.com
 .applog.uc.cn
 .applog.ucdns.uc.cn
@@ -347,6 +363,7 @@
 .arduino.uk.eu.org
 .arnoldgloverruss58.myshopify.com
 .as.baidu.com
+.as.mgtv.com
 .as1.wenku.baidu.com
 .asearch.alicdn.com
 .asia-northeast1-affiliate-pr.cloudfunctions.net
@@ -399,6 +416,7 @@
 .beacon.www.theguardian.com
 .beaconcdn.qq.com
 .beamanalytics.b-cdn.net
+.beizi.biz
 .bes-mtj.baidu.com
 .beyondwickedmapping.org
 .bgg.baidu.com
@@ -472,6 +490,8 @@
 .c.arstechnica.com
 .c.baidu.com
 .c.gj.qq.com
+.c.live.com
+.c.uaa.iqiyi.com
 .c.wired.com
 .c.yes.youku.com
 .cache.datamart.windows.com
@@ -516,6 +536,7 @@
 .cir-smart.baidu.com
 .cjhq.baidu.com
 .classify-client.services.mozilla.com
+.clc.stackoverflow.com
 .cleaner.baidu.com
 .click.aliyun.com
 .click.bes.baidu.com
@@ -531,11 +552,14 @@
 .clog.miguvideo.com
 .clouderrorreporting.googleapis.com
 .cloudfront-labs.amazonaws.com
+.cloudpush.iqiyi.com
 .cm.baidu.com
 .cm.bilibili.com
 .cm.jd.com
+.cm.passport.iqiyi.com
 .cmap.alibaba.com
 .cmc.tanx.com
+.cmop.mgtv.com
 .cms.opendsp.tanx.com
 .cms.tanx.com
 .cms.ucweb.com
@@ -554,6 +578,7 @@
 .commdata.v.qq.com
 .commerce.bing.com
 .commondata.oss-cn-hangzhou.aliyuncs.com
+.community.fandom.com
 .concert.io
 .concertads-configs.vox-cdn.com
 .conf.international.baidu.com
@@ -1879,6 +1904,8 @@
 .d9r4lqt28t1fm.cloudfront.net
 .d9tnvwv7i2n85.cloudfront.net
 .d9yk47of1efyy.cloudfront.net
+.da.mgtv.com
+.da.netease.com
 .da26k71rxh0kb.cloudfront.net
 .da327va27j0hh.cloudfront.net
 .da3uf5ucdz00u.cloudfront.net
@@ -2020,6 +2047,7 @@
 .dir.minigame.qq.com
 .direct-events-collector.spot.im
 .discuz.gtimg.cn
+.disp.titan.mgtv.com
 .dispatcher.upmc.uc.cn
 .dita6jhhqwoiz.cloudfront.net
 .divekcl7q9fxi.cloudfront.net
@@ -2109,6 +2137,7 @@
 .dnn506yrbagrg.cloudfront.net
 .dnre5xkn2r25r.cloudfront.net
 .dns.jd.com
+.dns.qiyipic.iqiyi.com
 .dns.weibo.cn
 .dns.weixin.qq.com
 .dns.weixin.qq.com.cn
@@ -2125,6 +2154,7 @@
 .dof9zd9l290mz.cloudfront.net
 .dog89nqcp3al4.cloudfront.net
 .doh.dns.apple.com
+.doh.iqiyi.com
 .doinntz6jwzoh.cloudfront.net
 .dojx47ab4dyxi.cloudfront.net
 .dojy0dg181308.cloudfront.net
@@ -2170,6 +2200,7 @@
 .dressimage.img-cn-beijing.aliyuncs.com
 .drf8e429z5jzt.cloudfront.net
 .drmcmm.baidu.com
+.drpf-edt.proxima.nie.netease.com
 .drrcckbju3nd0.cloudfront.net
 .drulilqe8wg66.cloudfront.net
 .drupalmetrics.ppg.apple.com
@@ -2304,6 +2335,7 @@
 .eloqua-tracking.unity3d.com
 .eloqua-trackings.unity3d.com
 .em.baidu.com
+.emoticon.sns.iqiyi.com
 .ems.youku.com
 .enc-90128738.b-cdn.net
 .enchantestore.myshopify.com
@@ -2367,6 +2399,7 @@
 .firebaselogging-pa.googleapis.com
 .firebaselogging.googleapis.com
 .first-hufu.oss-cn-shanghai.aliyuncs.com
+.firstpartycookie.istockphoto.com
 .fkrkkmxsqeb5bj9r.s3.amazonaws.com
 .flash.sec.intl.miui.com
 .flash.sec.miui.com
@@ -2400,6 +2433,7 @@
 .game.html5.qq.com
 .game.weibo.cn
 .game.weibo.com
+.gamecenter.iqiyi.com
 .gamex.mobile.youku.com
 .gator.volces.com
 .gdpr-settings.s3.amazonaws.com
@@ -2468,9 +2502,11 @@
 .h-adashx.ut.youku.com
 .h-adashx4ae.ut.taobao.com
 .h-adashx4yt.ut.taobao.com
+.h5.game.iqiyi.com
 .haiwai-ic.ksosoft.com
 .hao.uc.cn
 .hbid.ams3.cdn.digitaloceanspaces.com
+.hc-ssp.sm.cn
 .hc.baidu.com
 .hdtu.oss-cn-beijing.aliyuncs.com
 .heoads.b-cdn.net
@@ -2557,21 +2593,25 @@
 .hmma.baidu.com
 .hoplink.ksosoft.com
 .hot.browser.miui.com
+.hotchat-im.iqiyi.com
 .hpd.baidu.com
 .httpdns-api.aliyuncs.com
 .httpdns-sc.aliyuncs.com
+.httpdns-sdk.n.netease.com
 .httpdns.alicdn.com
 .httpdns.baidu.com
 .httpdns.bilivideo.com
 .httpdns.browser.miui.com
 .httpdns.kg.qq.com
 .httpdns.meituan.com
+.httpdns.n.netease.com
 .httpdnsvip.meituan.com
 .httpring.qq.com
 .https-filtering-check.adtidy.org
 .httpsdns.baidu.com
 .huatuo.qq.com
 .hudong.pl.youku.com
+.huichuan.sm.cn
 .huodong.pl.youku.com
 .huodong.vip.youku.com
 .hwstats.unity3d.com
@@ -2606,17 +2646,21 @@
 .ieonline.microsoft.com
 .ieonlinews.microsoft.com
 .if.mingxing.qq.com
+.ifacelog.iqiyi.com
 .ifs.tanx.com
 .igexin.com
 .ikcode.baidu.com
 .ilive.qq.com
 .ilyonanalytics.herokuapp.com
 .im-x.jd.com
+.image-ad.sm.cn
 .image.box.xiaomi.com
+.image.zzd.sm.cn
 .imageplus.baidu.com
 .images.b2bindia.samsung.com
 .images.b2bmkt.samsung.com
 .images.chbusiness.samsung.com
+.images.e.istockphoto.com
 .images.frbusiness.samsung.com
 .images.it.business.samsung.com
 .images.newsletter.larksuite.com
@@ -2631,6 +2675,7 @@
 .img1.gtimg.com
 .img1.pcfg.cache.wps.cn
 .img1.sj.qq.com
+.imgaliyun.res.mgtv.com
 .imgstat.baidu.com
 .improving.duckduckgo.com
 .indianetouristvisacoin.wordpress.com
@@ -2652,6 +2697,7 @@
 .intlsucus.ucweb.com
 .iob.imgur.com
 .ios-informationplatform.wps.cn
+.ip.geo.iqiyi.com
 .ip.taobao.com
 .isdspeed.qq.com
 .itsdata.map.baidu.com
@@ -2714,6 +2760,8 @@
 .log.avlyun.sec.intl.miui.com
 .log.geetest.com
 .log.jd.com
+.log.m.sm.cn
+.log.mgtv.com
 .log.mix.sina.com.cn
 .log.mmstat.com
 .log.music.baidu.com
@@ -2772,6 +2820,7 @@
 .m.simba.taobao.com
 .m1.baidu.com
 .m1tm.motor1.com
+.ma-adx.ctrip.com
 .ma.baidu.com
 .mads-eu.amazon.com
 .mads-fe.amazon.com
@@ -2794,6 +2843,7 @@
 .mazu.3g.qq.com
 .mazu.m.qq.com
 .mazu.sec.miui.com
+.mbdlog.iqiyi.com
 .mcdn.bilivideo.cn
 .mcdn.bilivideo.com
 .mcgi.v.qq.com
@@ -2856,6 +2906,7 @@
 .mobads-logs.baidu.com
 .mobads-pre-config.cdn.bcebos.com
 .mobads.baidu.com
+.mobaliyun.res.mgtv.com
 .mobantong.oss-cn-hangzhou.aliyuncs.com
 .mobile.ximalaya.com
 .mobileads.google.com
@@ -2877,7 +2928,9 @@
 .mqqad.html5.qq.com
 .mqqadr.reader.qq.com
 .mqtt.zhihu.com
+.msg.iqiyi.com
 .msg.youku.com
+.msga.cupid.iqiyi.com
 .msite.baidu.com
 .msmetrics.ws.sonos.com
 .mssdk.bytedance.com
@@ -2897,12 +2950,16 @@
 .nativead.s3.amazonaws.com
 .nbsdk-baichuan.alicdn.com
 .nbsdk-baichuan.taobao.com
+.ndct-data.video.iqiyi.com
 .neirong.baidu.com
 .net.mydays.de
 .news.mpush.qq.com
 .newspush.sinajs.cn
 .nextdaymedia-ads.s3.amazonaws.com
+.nexus.officeapps.live.com
+.nexusrules.officeapps.live.com
 .nitrous-analytics.s3.amazonaws.com
+.nl-rcd.iqiyi.com
 .nmetrics.samsung.com
 .nmetrics.samsungmobile.com
 .nmtracking.netflix.com
@@ -2929,6 +2986,7 @@
 .ogads-pa.googleapis.com
 .omgid.qq.com
 .omgmta1.qq.com
+.omni.istockphoto.com
 .oms.wsj.com
 .oneid.mmstat.com
 .onespot-tracking.herokuapp.com
@@ -2943,6 +3001,7 @@
 .openmonitor.alipay.com
 .openrcv.baidu.com
 .ophan.theguardian.com
+.opportunarch.iqiyi.com
 .optimize.google.com
 .optimus-ads.amap.com
 .orange-dc.youku.com
@@ -2950,6 +3009,9 @@
 .os-mon.zijieapi.com
 .osfota.cdn.aliyun.com
 .oth.eve.qq.com
+.ott-v0-al.data.mgtv.com
+.ott.v1.data.mgtv.com
+.outlookads.live.com
 .p.alimama.com
 .p.hentaiforce.net
 .p.imgur.com
@@ -2980,6 +3042,7 @@
 .pangolin-sdk-toutiao.com
 .pangolin-sdk-toutiao1.com
 .pangolin.snssdk.com
+.paopao.iqiyi.com
 .par02p.wns.windows.com
 .parsely.com
 .partnerad.l.google.com
@@ -2995,6 +3058,9 @@
 .pcfg.wps.cn
 .pcm-img.zhls.qq.com
 .pcookie.tanx.com
+.pcvideoaliyun.titan.mgtv.com
+.pcvideoyd.titan.mgtv.com
+.pcweb.v1.mgtv.com
 .pdc.micloud.xiaomi.net
 .perf-events.cloud.unity3d.com
 .permutive.com
@@ -3024,11 +3090,14 @@
 .pms.mb.qq.com
 .polaris.zijieapi.com
 .policy.jd.com
+.policy.video.iqiyi.com
 .popcashjs.b-cdn.net
 .pos.baidu.com
 .ppurifier.game.xiaomi.com
+.pr.nss.netease.com
 .prd-lender.cdp.internal.unity3d.com
 .predataclient.b-cdn.net
+.presence.teams.live.com
 .presentationtracking.netflix.com
 .prodregistryv2.org
 .projecta-common-1258344701.file.myqcloud.com
@@ -3049,6 +3118,8 @@
 .publisher-assets.spot.im
 .puds.test.uae.uc.cn
 .puds.ucweb.com
+.puma-api.iqiyi.com
+.puma.api.iqiyi.com
 .pups.baidu.com
 .pups.bdimg.com
 .push.m.youku.com
@@ -3058,6 +3129,7 @@
 .px-intl.ucweb.com
 .px.effirst.com
 .px.ucweb.com
+.px.wpk.quark.cn
 .qapm.baidu.com
 .qc.arstechnica.com
 .qc.wired.com
@@ -3075,6 +3147,7 @@
 .r.release.qq.com
 .ra.gtimg.com
 .ra10.xyz
+.rad.live.com
 .rad.microsoft.com
 .rcgi.video.qq.com
 .rdstat.tanx.com
@@ -3117,6 +3190,7 @@
 .rm.sina.com.cn
 .rmonitor.qq.com
 .robalmeister.workers.dev
+.roi.soulapp.cn
 .romeccs.microsoft.com
 .routertips.video.qq.com
 .rp.baidu.com
@@ -3208,6 +3282,7 @@
 .simaba.taobao.com
 .simba.m.taobao.com
 .singular.net
+.site.u-mob.cn
 .sjarvis.taobao.com
 .skdisplay.jd.com
 .slb-p2p.vcloud.ks-live.com
@@ -3236,6 +3311,7 @@
 .sofire.baidu.com
 .sofire.bdstatic.com
 .soft.tbs.imtt.qq.com
+.somni.istockphoto.com
 .soup.v.qq.com
 .sp-mms.weather.com
 .sp-wukong-tracker.b-cdn.net
@@ -3258,6 +3334,7 @@
 .ssp.qq.com
 .sspapi-prd.samsungrs.com
 .sstats.wired.com
+.ssw.live.com
 .st-fly.b-cdn.net
 .st-offlinegame.vivo.com.cn
 .staging-notify.sec.miui.com
@@ -3278,12 +3355,14 @@
 .static-addtoany-com.cdn.ampproject.org
 .static-doubleclick-net.l.google.com
 .static.alimama.com
+.static.g.iqiyi.com
 .static.map.bdimg.com
 .static.narrativ.com
 .static.su.baidu.com
 .staticadm.leju.sina.com.cn
 .staticxx.facebook.com
 .statis.mobile.youku.com
+.statis.push.netease.com
 .statistic.qzone.qq.com
 .stats.paypal.com
 .stats.unity3d.com
@@ -3308,8 +3387,10 @@
 .su.bdstatic.com
 .sugar.zhihu.com
 .suggestion.baidu.com
+.sugs.m.sm.cn
 .sunlightmetrics.b-cdn.net
 .supportmetrics.apple.com
+.svibeacon.onezapp.com
 .swa.gtimg.com
 .sworkitads.herokuapp.com
 .swwwxww.oss-cn-hangzhou.aliyuncs.com
@@ -3329,6 +3410,7 @@
 .t10.baidu.com
 .t11.baidu.com
 .t12.baidu.com
+.t7z.cupid.iqiyi.com
 .ta.qq.com
 .tags.voacantonese.com
 .tajs.qq.com
@@ -3387,6 +3469,7 @@
 .tnc3-bjlgy.snssdk.com
 .tnc3-bjlgy.zijieapi.com
 .tns.simba.taobao.com
+.togame.iqiyi.com
 .toggle.qq.com
 .token.safebrowsing.apple
 .tongji.baidu.com
@@ -3395,6 +3478,7 @@
 .top.h.qhimg.com
 .toruk.tanx.com
 .tp2p.kg.qq.com
+.tpa-hcdn.iqiyi.com
 .tpi-app.herokuapp.com
 .tpstelemetry.tencent.com
 .tpush.html5.qq.com
@@ -3403,6 +3487,7 @@
 .trace.zhiyan.tencent-cloud.net
 .tracelog.www.alibaba.com
 .track-dark-bz.b-cdn.net
+.track.lc.quark.cn
 .track.miui.com
 .track.uc.cn
 .tracker-00.qvb.qcloud.com
@@ -3506,6 +3591,7 @@
 .utk.baidu.com
 .utp.ucweb.com
 .uu.qq.com
+.uvgxhu.ezgif.com
 .v9banners-com.cdn.ampproject.org
 .val.api.youku.com
 .vali-ugc.cp31.ott.cibntv.net
@@ -3514,6 +3600,8 @@
 .vd.contents.prod.eu.s3.amazonaws.com
 .vd.emp.prd.s3.amazonaws.com
 .vhotwsh.video.qq.com
+.vibeaconstr.onezapp.com
+.video-ad.sm.cn
 .video-dsp.pddpic.com
 .video-stats.video.google.com
 .video.dispatch.tc.qq.com
@@ -3546,6 +3634,7 @@
 .wap.mpush.qq.com
 .wap3.ucweb.com
 .wapwbclick.mobile.sina.cn
+.watson.live.com
 .watson.microsoft.com
 .wax.weibo.com
 .wb.gtimg.com
@@ -3621,6 +3710,7 @@
 .youku-acs.m.taobao.com
 .ys2000.cdn.bcebos.com
 .yt.mmstat.com
+.yuedu.iqiyi.com
 .yun-hl.3g.qq.com
 .yybx.oss-cn-hangzhou.aliyuncs.com
 .zhanzhang.baidu.com
